--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.ini
@@ -134,8 +134,8 @@ COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Añadir archivos..."
 COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Puede soltar archivos aquí o utilice el botón examinar"
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Error al mover archivo de avatar al directorio de medios de comunicación"
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "Tamaño del archivo de Avatar excede el límite permitido por la configuración"
-; COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Insert All"
-; COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Remove All"
+COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Introduzca todos los"
+COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Eliminar todos"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "Tamaño de archivo de datos adjuntos superan el límite permitido por la configuración"
 COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "Tamaño de imagen datos adjuntos excede el límite permitido por la configuración"
 
@@ -293,228 +293,228 @@ COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Perfil no guardado"
 COM_KUNENA_PROFILE_SAVE_ERROR="Error en Perfil de ahorro"
 COM_KUNENA_THANKYOU_MORE_USERS = "y este usuario %s otros gracias"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Temas que requieren atención"
-; COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Profile saved."
+COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Perfil de guardado."
 COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Publicar archivos de imagen se permite sólo para moderadores"
-; COM_KUNENA_TEAM_MEMBER="Team Member"
-; COM_KUNENA_X_TOPICS_0 = "No topics"
-; COM_KUNENA_X_TOPICS_1 = "%s topic"
-; COM_KUNENA_X_TOPICS_MORE = "%s topics"
-; COM_KUNENA_BY_X = "by %s"
-; COM_KUNENA_FAVORITE = "Favorite"
-; COM_KUNENA_MYPOSTS = "Contains my posts"
-; COM_KUNENA_TOPIC_STARTED_ON = "Topic started"
-; COM_KUNENA_VIEW_NO_POSTS = "There are no posts in this category."
-; COM_KUNENA_VIEW_NO_TOPICS = "There are no topics to display."
-; COM_KUNENA_NEW_TOPIC = "New Topic"
-; COM_KUNENA_USERTYPE = "User Type"
-; COM_KUNENA_X_VIEWS = "%d Views"
-; COM_KUNENA_X_POSTS = "%d Posts"
-; COM_KUNENA_X_THANKS = "%d Thanks"
-; COM_KUNENA_EMAIL = "E-Mail"
-; COM_KUNENA_REPLYTO_X = "Reply to %s"
+COM_KUNENA_TEAM_MEMBER="Miembro del equipo"
+COM_KUNENA_X_TOPICS_0 = "No temas"
+COM_KUNENA_X_TOPICS_1 = "tema de %s"
+COM_KUNENA_X_TOPICS_MORE = "temas de %s"
+COM_KUNENA_BY_X = "por %s"
+COM_KUNENA_FAVORITE = "Favoritos"
+COM_KUNENA_MYPOSTS = "Contiene mis posts"
+COM_KUNENA_TOPIC_STARTED_ON = "Tema iniciado"
+COM_KUNENA_VIEW_NO_POSTS = "No hay entradas en esta categoría."
+COM_KUNENA_VIEW_NO_TOPICS = "Hay no hay temas para mostrar."
+COM_KUNENA_NEW_TOPIC = "Nuevo tema"
+COM_KUNENA_USERTYPE = "Tipo de usuario"
+COM_KUNENA_X_VIEWS = "%d views"
+COM_KUNENA_X_POSTS = "mensajes de %d"
+COM_KUNENA_X_THANKS = "%d gracias"
+COM_KUNENA_EMAIL = "Correo electrónico"
+COM_KUNENA_REPLYTO_X = "Contestar a %s"
 
-; COM_KUNENA_X_HIDDEN = "%d hidden"
-; COM_KUNENA_SEE_ALL_SUBJECTS = "See Complete List of Subjects"
-; COM_KUNENA_SEE_MORE = "See More..."
+COM_KUNENA_X_HIDDEN = "%d ocultados"
+COM_KUNENA_SEE_ALL_SUBJECTS = "Ver lista completa de temas"
+COM_KUNENA_SEE_MORE = "Ver más..."
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/default.php
 
-; COM_KUNENA_FORUM_HEADER = "Category Header"
-; COM_KUNENA_GEN_GOTOBOTTOM = "Go to bottom"
+COM_KUNENA_FORUM_HEADER = "Cabecera de categoría"
+COM_KUNENA_GEN_GOTOBOTTOM = "Ir a la parte inferior"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/list.php
 
-; COM_KUNENA_MARK_ALL_READ = "Mark All Read"
-; COM_KUNENA_MARK_CATEGORIES_READ = "Mark Read"
+COM_KUNENA_MARK_ALL_READ = "Marcar todo leído"
+COM_KUNENA_MARK_CATEGORIES_READ = "Marcar como leída"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/list_embed.php
 
-; COM_KUNENA_GEN_NOFORUMS = "There are no categories in the section!"
-; COM_KUNENA_LOCKED_CATEGORY = "Category is locked"
-; COM_KUNENA_SHOWCAT_PENDING = "pending message(s)"
-; COM_KUNENA_CATEGORIES_LABEL_CREATECATEGORY = "New Category"
-; COM_KUNENA_CATEGORIES_LABEL_EDITSECTION = "Edit Section"
-; COM_KUNENA_CATEGORIES_LABEL_GETRSS = "Get the latest posts directly to your desktop"
-; COM_KUNENA_CATEGORIES_LABEL_MARKCATEGORYREAD = "Mark category read"
+COM_KUNENA_GEN_NOFORUMS = "Hay no hay categorías en la sección!"
+COM_KUNENA_LOCKED_CATEGORY = "Categoría está bloqueada"
+COM_KUNENA_SHOWCAT_PENDING = "mensaje pendiente"
+COM_KUNENA_CATEGORIES_LABEL_CREATECATEGORY = "Nueva categoría"
+COM_KUNENA_CATEGORIES_LABEL_EDITSECTION = "Editar sección"
+COM_KUNENA_CATEGORIES_LABEL_GETRSS = "Obtener los últimos posts directamente en tu escritorio"
+COM_KUNENA_CATEGORIES_LABEL_MARKCATEGORYREAD = "Categoría marca leer"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/manage.php
 
-; COM_KUNENA_PUBLICACCESS = "Public Access"
+COM_KUNENA_PUBLICACCESS = "Acceso público"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/user_row.php
 
-; COM_KUNENA_MY_POSTS = "Posts"
+COM_KUNENA_MY_POSTS = "Mensajes"
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/statistics.php
 
-; COM_KUNENA_STAT_USERLIST = "User List"
+COM_KUNENA_STAT_USERLIST = "Lista de usuarios"
 
 ; JROOT/components/com_kunena/template/crypsis/html/search/default.php
 
-; COM_KUNENA_FORUM_SEARCHRESULTS = "Displaying %s out of %s results."
-; COM_KUNENA_SEARCH_ANSWERS = "Answers"
-; COM_KUNENA_SEARCH_FIND_WITH = "Find topics with"
-; COM_KUNENA_SEARCH_LEAST = "At least"
-; COM_KUNENA_SEARCH_MOST = "At most"
-; COM_KUNENA_SEARCH_OPTIONS = "Search Options"
-; COM_KUNENA_SEARCH_USER_ACTIVE = "Activity in Topics"
-; COM_KUNENA_SEARCH_USER_POSTED = "Messages posted by"
-; COM_KUNENA_SEARCH_USER_STARTED = "Topics started by"
+COM_KUNENA_FORUM_SEARCHRESULTS = "Visualización de %s de %s resultados."
+COM_KUNENA_SEARCH_ANSWERS = "Respuestas"
+COM_KUNENA_SEARCH_FIND_WITH = "Encontrar temas con"
+COM_KUNENA_SEARCH_LEAST = "Por lo menos"
+COM_KUNENA_SEARCH_MOST = "En la mayoría"
+COM_KUNENA_SEARCH_OPTIONS = "Opciones de búsqueda"
+COM_KUNENA_SEARCH_USER_ACTIVE = "Actividad en temas"
+COM_KUNENA_SEARCH_USER_POSTED = "Mensajes escritos por"
+COM_KUNENA_SEARCH_USER_STARTED = "Iniciado por temas"
 
 ; JROOT/components/com_kunena/template/crypsis/html/statistics/default.php
 
-; COM_KUNENA_STAT_GENERAL_STATS = "General Statistics"
+COM_KUNENA_STAT_GENERAL_STATS = "Estadísticas generales"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_actions.php
 
-; COM_KUNENA_GEN_GOTO = "Goto"
+COM_KUNENA_GEN_GOTO = "Goto"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_message_actions.php
 
-; COM_KUNENA_REPORT = "Report to moderator"
-; COM_KUNENA_THANKYOU = "The following user(s) said Thank You"
+COM_KUNENA_REPORT = "Informar al moderador"
+COM_KUNENA_THANKYOU = "El siguiente usuario dijo gracias"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_pollresults.php
 
-; COM_KUNENA_TOPIC_VOTE_RESET = "Reset Votes"
+COM_KUNENA_TOPIC_VOTE_RESET = "Reposición de votos"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit.php
 
-; COM_KUNENA_EDITOR_ADD_FILE = "Add File"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_SUBJECT = "Enter the subject"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_EMAIL = "Enter the email"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_AUTHORNAME = "Enter the name of author"
-; COM_KUNENA_UPLOAD_MAX_FILES_WEIGHT = "Maximum File Size"
-; COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT = "Maximum Image File Size"
+COM_KUNENA_EDITOR_ADD_FILE = "Agregar archivo"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_SUBJECT = "Ingresar el asunto"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_EMAIL = "Introduzca el correo electrónico"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_AUTHORNAME = "Escriba el nombre del autor"
+COM_KUNENA_UPLOAD_MAX_FILES_WEIGHT = "Tamaño máximo de archivo"
+COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT = "Tamaño del archivo de imagen máxima"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/edit/editor/default.php
 
-; COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Map Settings"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Type"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Zoom level"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="City"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hybrid"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Roadmap"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Terrain"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Satellite"
-; COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Code Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Picture Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Size"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Link Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Text"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Size"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Width"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Height"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Url Provider"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Poll Settings"
-; COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Add"
-; COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Close modal"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Video Settings"
+COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Configuración del mapa"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Tipo"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Nivel de zoom"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="Ciudad"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Híbrido"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Hoja de ruta"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Terreno"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Satélite"
+COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Configuración de código"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Configuración de la imagen"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Tamaño"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Configuración de enlace"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Texto"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Tamaño"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Ancho"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Altura"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Proveedor URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Configuración de la encuesta"
+COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Añadir"
+COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Cierre modal"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Ajustes de vídeo"
 
 ; Rating
 
-; COM_KUNENA_TOPIC_RATING_ROCKS = "Great"
-; COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Good"
-; COM_KUNENA_TOPIC_RATING_MEH = "Medium"
-; COM_KUNENA_TOPIC_RATING_KINDABAD = "Bad"
-; COM_KUNENA_TOPIC_RATING_SUCKS = "Very bad"
-; COM_KUNENA_RATE_LOGIN = "You need to be logged to add rate"
-; COM_KUNENA_RATE_NOT_YOURSELF = "You cannot rate your own topic"
-; COM_KUNENA_RATE_ALLREADY = "You have already gived a rate"
-; COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "The star has been successfully saved"
+COM_KUNENA_TOPIC_RATING_ROCKS = "Gran"
+COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Buena"
+COM_KUNENA_TOPIC_RATING_MEH = "Medio"
+COM_KUNENA_TOPIC_RATING_KINDABAD = "Mala"
+COM_KUNENA_TOPIC_RATING_SUCKS = "Muy malo"
+COM_KUNENA_RATE_LOGIN = "Necesita estar conectado para añadir tarifa"
+COM_KUNENA_RATE_NOT_YOURSELF = "No se valora su propio tema"
+COM_KUNENA_RATE_ALLREADY = "Ha dado ya una tasa de"
+COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "La estrella se ha guardado con éxito"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
-; COM_KUNENA_POST_TOPIC_HISTORY = "Topic History of"
+COM_KUNENA_POST_TOPIC_HISTORY = "Tema de historia de"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/moderate.php
 
-; COM_KUNENA_POST_MODERATION_PROCEED = "Proceed"
-; COM_KUNENA_TITLE_MODERATE_MESSAGE = "Moderate Message"
+COM_KUNENA_POST_MODERATION_PROCEED = "Proceder"
+COM_KUNENA_TITLE_MODERATE_MESSAGE = "Mensaje moderado"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topics/
 
-; COM_KUNENA_LOCKED_TOPIC = "Topic is locked"
+COM_KUNENA_LOCKED_TOPIC = "Tema está bloqueado"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/default_attachments.php
 
-; COM_KUNENA_FILETYPE = "Type"
+COM_KUNENA_FILETYPE = "Tipo"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/default_ban.php
 
-; COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "YYYY-MM-DD - HH:MM:SS"
+COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "AAAA-MM-DD - HH"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/edit_avatar.php
 
-; COM_KUNENA_PROFILE_AVATAR_UPLOAD = "Upload New Avatar"
+COM_KUNENA_PROFILE_AVATAR_UPLOAD = "Subir Avatar nuevo"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/list.php
 
-; COM_KUNENA_USRL_REGISTERED_USERS = "%s has <strong>%d</strong> registered users"
+COM_KUNENA_USRL_REGISTERED_USERS = "%s tiene <strong>%d</strong> registrado usuarios"
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/logout_menu.php
 
-; COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Preferences"
-; COM_KUNENA_LOGOUTMENU_LABEL_HELP = "Help"
+COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Preferencias"
+COM_KUNENA_LOGOUTMENU_LABEL_HELP = "Ayuda"
 
 ; JROOT/components/com_kunena/template/crypsis/html/announcement/list.php
 
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_ADD = "Add"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_DELETE = "Delete"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_EDIT = "Edit"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_PUBLISH = "Publish"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_UNPUBLISH = "Unpublish"
-; COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Author"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_ADD = "Añadir"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_DELETE = "Eliminar"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_EDIT = "Editar"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_PUBLISH = "Publicar"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_UNPUBLISH = "Anular la publicación de"
+COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Autor"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/message/actions.php
 
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Quick Reply"
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Action"
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Moderate"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Respuesta rápida"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Acción"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Moderada"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/actions.php
 
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_ACTION = "Action"
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Moderation"
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_LAYOUT = "Layout"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_ACTION = "Acción"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Moderación"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_LAYOUT = "Diseño"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/row/table.php
 
-; COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Question"
+COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Pregunta"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/topic/poll/results/default.php
 
-; COM_KUNENA_TOPIC_MODAL_LABEL_VOTE_RESET = "Confirm Reset of Votes"
-; COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET = "Are you sure that you want to reset all the votes in this poll? This action cannot be reverted."
-; COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE = "Cancel"
-; COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE = "Confirm"
+COM_KUNENA_TOPIC_MODAL_LABEL_VOTE_RESET = "Confirmar reinicio de votos"
+COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET = "¿Está seguro que desea restablecer todos los votos en esta encuesta? Esta acción no puede ser revertida."
+COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE = "Cancelar"
+COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE = "Confirmar"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/announcement/edit/default.php
 
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_TITLE = "Enter the title of announcement"
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_SDESCRIPTION = "Enter the short description of announcement"
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION = "Enter the full description of announcement"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_TITLE = "Introduzca el título del anuncio"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_SDESCRIPTION = "Introduzca la descripción breve del anuncio de"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION = "Escriba la descripción completa del anuncio"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/user/profile/default.php
 
-; COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS = "Less"
-; COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE = "More"
-; COM_KUNENA_TOPIC_AUTHOR="Topic Author"
-; COM_KUNENA_MODERATOR="Moderator"
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS = "Menos"
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE = "Más"
+COM_KUNENA_TOPIC_AUTHOR="Autor del tema"
+COM_KUNENA_MODERATOR="Asesor de la"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/user/item/summary/default.php
-; COM_KUNENA_PROFILE_VIEWS = "Profile views"
-; COM_KUNENA_THANK_YOU_RECEIVED = "Thank you received"
+COM_KUNENA_PROFILE_VIEWS = "Vistas de perfil"
+COM_KUNENA_THANK_YOU_RECEIVED = "Recibidas muchas gracias"
 
 ; new Crypsis
-; COM_KUNENA_GEN_CATEGORY = "Category"
-; COM_KUNENA_GEN_MESSAGE = "Message"
-; COM_KUNENA_GEN_AUTHOR = "Author"
-; COM_KUNENA_EDITOR_EMOTICONS_LABEL = "Emoticons"
-; COM_KUNENA_TOPICLIST_AUTHOR_LABEL = "Author"
-; COM_KUNENA_EDITOR_SMILIES = "Smilies"
-; COM_KUNENA_EDITOR_HELPLINE_SMILIES = "Select a smiley in the list below or use emojis in the textarea"
+COM_KUNENA_GEN_CATEGORY = "Categoría"
+COM_KUNENA_GEN_MESSAGE = "Mensaje"
+COM_KUNENA_GEN_AUTHOR = "Autor"
+COM_KUNENA_EDITOR_EMOTICONS_LABEL = "Emoticonos"
+COM_KUNENA_TOPICLIST_AUTHOR_LABEL = "Autor"
+COM_KUNENA_EDITOR_SMILIES = "Emoticones"
+COM_KUNENA_EDITOR_HELPLINE_SMILIES = "Seleccione un smiley en la lista a continuación o utilice emojis en textarea"
