--- a/src/components/com_kunena/language/ro-RO/ro-RO.com_kunena.ini
+++ b/src/components/com_kunena/language/ro-RO/ro-RO.com_kunena.ini
@@ -144,7 +144,7 @@ COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Adaugă Fișiere..."
 COM_KUNENA_BUTTON_ANNOUNCEMENT_DELETE = "&#536;terge"
 COM_KUNENA_BUTTON_ANNOUNCEMENT_EDIT = "Editare"
 ; COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST = "Control Panel"
-; COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Manage Categories"
+COM_KUNENA_BUTTON_CATEGORY_MANAGE = "Administrează Categorii"
 ; COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG = "Enter to Category Manager."
 COM_KUNENA_BUTTON_CATEGORY_MARKREAD = "Marcheaz&#259; mesajele citit"
 ; COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG = "Mark all topics in this category as read."
