--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.controllers.ini
@@ -81,7 +81,7 @@ COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "¡Has cambiado tu voto!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Votos reiniciados correctamente"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "¡Has dado tu voto!"
 COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="Tiene muchos enlaces en el mensaje, por favor bajarlo!"
-; COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "You cannot put an URL in the subject of the topic or message."
+COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "Se puede poner un enlace en el tema del tema o mensaje."
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
