--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.templates.ini
@@ -41,8 +41,8 @@ COM_KUNENA_ANN_LONGTEXT = "Texto Largo"
 COM_KUNENA_ANN_PUBLISH = "Publicar"
 COM_KUNENA_ANN_READMORE = "Leer Más..."
 COM_KUNENA_ANN_SHOWDATE = "Mostrar Fecha"
-; COM_KUNENA_ANN_DATE_UP = "Publish Date"
-; COM_KUNENA_ANN_DATE_DOWN = "Unpublish Date"
+COM_KUNENA_ANN_DATE_UP = "Fecha de publicación"
+COM_KUNENA_ANN_DATE_DOWN = "Anular la publicación de fecha"
 COM_KUNENA_ANN_SORTTEXT = "Texto Corto"
 COM_KUNENA_ANN_TITLE = "Título"
 COM_KUNENA_ATTACHMENTS = "Adjuntos:"
@@ -352,7 +352,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS="Iconos de tema"
 COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Habilitar css topicons"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Carga externa CDN Fontawesome"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Carga externa CDN Fontawesome"
-; COM_KUNENA_TEMPLATE_NONE="Normal"
+COM_KUNENA_TEMPLATE_NONE="Normal"
 COM_KUNENA_TEMPLATE_NORMAL="Por defecto"
 COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
 COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
@@ -362,19 +362,19 @@ COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES="Este mensaje tiene archivos adjun
 COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE="Este mensaje tiene una imagen adjunta. <br /> Por favor iniciar sesión o registrarse para verla."
 COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="Este mensaje tiene un archivo adjunto. <br /> Por favor iniciar sesión o registrarse para verlo."
 COM_KUNENA_AUP_MEDALS = "Medallas:"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="How to show Whoisonline users"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Name"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
-; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Load Bootstrap css"
-; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Load Bootstrap css for none Bootstrap templates"
-; COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Write Access"
-; COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Show the access rights on the bottom of the topics"
-; COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Show Instagram"
-; COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Show Instagram"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Show Soundcloud"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Show Soundcloud"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="Cómo mostrar los usuarios Whoisonline"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Nombre"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Ambos"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Cargar el Bootstrap css"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Carga de css Bootstrap para ninguno arranque plantillas"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Acceso de escritura"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Mostrar los derechos de acceso en la parte inferior de los temas"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Ver Instagram"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Ver Instagram"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Ver Soundcloud"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Ver Soundcloud"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
@@ -577,93 +577,93 @@ COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC = "Color de leyenda para Moderadores."
 COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR = "Color de Usuario"
 COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Color de leyenda para los usuarios."
 COM_KUNENA_TEMPLATE_TABS = "Pestañas"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
-; COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
-; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Show announcements"
-; COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
-; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
-; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show emoticons on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show twitter on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show ebay"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show link"
-; COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show link on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show picture"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show picture on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show hide"
-; COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show hide on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show spoiler"
-; COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Show spoiler on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Show table"
-; COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Show table on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Show code"
-; COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Show code on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Show quote"
-; COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Show quote on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Show divider"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Show divider on editor"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
-; COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
-; COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
-; COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Social Theme"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Select the theme for social buttons"
-; COM_KUNENA_CLASSIC="Classic"
-; COM_KUNENA_FLAT="Flat"
-; COM_KUNENA_MINIMA="Minima"
-; COM_KUNENA_PLAIN="Plain"
-; COM_KUNENA_ACCESS_ALLOWED="Allowed:"
-; COM_KUNENA_ACCESS_NOTALLOWED="Not Allowed:"
-; COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="to create new topic."
-; COM_KUNENA_ACCESS_ALLOWED_REPLY=" to reply."
-; COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
-; COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
-; COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
-; COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
-; COM_KUNENA_LABELS_QUESTION="Question"
-; COM_KUNENA_LABELS_IMPORTANT="Important"
-; COM_KUNENA_LABELS_IDEA="Idea"
-; COM_KUNENA_LABELS_LOVED="Loved"
-; COM_KUNENA_LABELS_SOLVED="Solved"
-; COM_KUNENA_LABELS_MERGED="Merged"
-; COM_KUNENA_LABELS_DELETED="Deleted"
-; COM_KUNENA_DISABLED="Disabled"
-; COM_KUNENA_ENABLED_TOPIC="Topic id"
-; COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Mesa de luz color"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Seleccione el color de la caja de luz"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "Blanco"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Negro"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Longitud del título mensaje"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Mostrar el menú"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Mostrar el menú en el foro"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Módulos de pantalla"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Módulos de exhibición en el foro"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Pan rallado de la pantalla"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Pan rallado de la pantalla en el foro"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Mostrar anuncios"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Mostrar anuncios en el foro"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Mostrar pie de página"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Mostrar el pie de página en el foro"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Video del desfile"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Ver video editor"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Mostrar mapa"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Mostrar mapas en editor"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Mostrar emoticones"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Mostrar emoticonos en el editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Mostrar twitter"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Twitter mostrar el editor de"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Ver ebay"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Mostrar ebay en editor"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Ver enlace"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Mostrar link en editor"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Mostrar imagen"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Mostrar imagen en el editor"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Mostrar ocultar"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Mostrar ocultar el editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Mostrar spoiler"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Mostrar spoiler en editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Mostrar tabla"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Mostrar tabla en el editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Mostrar código"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Mostrar código en el editor"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Ver cotización"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Ver cotización de editor"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Divisor de mostrar"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Divisor de mostrar en el editor"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. longitud del título de mensaje en mensaje"
+COM_KUNENA_TEMPLATE_RECOVER="Accidente de recuperar y almacenar campos"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="Esto recuerda los datos de sus mensajes, en accidentes o mover datos de quickreply al editor"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Icono de categoría predeterminada"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Icono de la categoría de default, por defecto es el icono de la carpeta"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Seleccionar el color para los iconos de categorías"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Seleccionar el color para los iconos de categorías"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Seleccionar el color para el nuevo icono y texto"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Seleccionar el color para el nuevo icono y texto"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Escribir"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Cuota Social de exhibición"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Fontawesome de necesidades para los iconos"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Tema social"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Seleccione el tema de los botones sociales"
+COM_KUNENA_CLASSIC="Clásico"
+COM_KUNENA_FLAT="Plano"
+COM_KUNENA_MINIMA="Mínimos de"
+COM_KUNENA_PLAIN="Llanura de"
+COM_KUNENA_ACCESS_ALLOWED="Permitido:"
+COM_KUNENA_ACCESS_NOTALLOWED="No permite:"
+COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="crear nuevo tema."
+COM_KUNENA_ACCESS_ALLOWED_REPLY=" para responder."
+COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="para agregar archivos adjuntos."
+COM_KUNENA_ACCESS_ALLOWED_EDITPOST="para editar tu mensaje."
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Categoría imagen camino"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Ruta de la imagen de categoría. Si se establece la ruta de acceso como category_images, la ruta completa será your_html_rootfolder/medios/kunena/category_images /"
+COM_KUNENA_LABELS_QUESTION="Pregunta"
+COM_KUNENA_LABELS_IMPORTANT="Importante"
+COM_KUNENA_LABELS_IDEA="Idea"
+COM_KUNENA_LABELS_LOVED="Amado"
+COM_KUNENA_LABELS_SOLVED="Solucionado"
+COM_KUNENA_LABELS_MERGED="Combinado"
+COM_KUNENA_LABELS_DELETED="Elimina"
+COM_KUNENA_DISABLED="Con discapacidad"
+COM_KUNENA_ENABLED_TOPIC="Identificación del tema"
+COM_KUNENA_ENABLED_LABEL="Id personalizado"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Forum Header Background"
-; COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Hover Tab Color"
-; COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Enter the color of the menu tab when hovered over."
-; COM_KUNENA_TEMPLATE_SKINNER = "Blend with Joomla Template"
-; COM_KUNENA_TEMPLATE_SKINNER_DESC = "Automatically blend the default template with the colors or you Joomla template."
-; COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Toggler Color"
-; COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Enter the color of the section toggler button."
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Fondo de cabecera del Foro"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Hover Color de ficha"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Introduzca el color de la ficha de menú cuando se cernía sobre."
+COM_KUNENA_TEMPLATE_SKINNER = "Mezcla con plantilla Joomla"
+COM_KUNENA_TEMPLATE_SKINNER_DESC = "Mezcla automáticamente la plantilla por defecto con los colores o la plantilla de Joomla."
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Color de alternador"
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Introduzca el color del botón alternador sección."
 
 ; Removed strings
 
