--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.views.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.views.ini
@@ -131,7 +131,7 @@ COM_KUNENA_LOGIN_OR = "o"
 ; JROOT/components/com_kunena/views/topics/
 
 COM_KUNENA_SHOW_ALL = "Todos"
-; COM_KUNENA_WARNING_READONLY="The forum is in read only mode."
+COM_KUNENA_WARNING_READONLY="El foro está en modo de sólo lectura."
 
 ; JROOT/components/com_kunena/views/topics/view.
 
