--- a/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
@@ -644,16 +644,16 @@ COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="om toe te voegen attachements."
 COM_KUNENA_ACCESS_ALLOWED_EDITPOST="voor het bewerken van uw bericht."
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Categorie afbeeldingen pad"
 COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Categorie afbeeldingen pad. Als u het pad ingesteld als category_images, het volledige pad zullen your_html_rootfolder/media/kunena/category_images /"
-; COM_KUNENA_LABELS_QUESTION="Question"
-; COM_KUNENA_LABELS_IMPORTANT="Important"
-; COM_KUNENA_LABELS_IDEA="Idea"
-; COM_KUNENA_LABELS_LOVED="Loved"
-; COM_KUNENA_LABELS_SOLVED="Solved"
-; COM_KUNENA_LABELS_MERGED="Merged"
-; COM_KUNENA_LABELS_DELETED="Deleted"
-; COM_KUNENA_DISABLED="Disabled"
-; COM_KUNENA_ENABLED_TOPIC="Topic id"
-; COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_LABELS_QUESTION="Vraag"
+COM_KUNENA_LABELS_IMPORTANT="Belangrijk"
+COM_KUNENA_LABELS_IDEA="Idee"
+COM_KUNENA_LABELS_LOVED="Loved"
+COM_KUNENA_LABELS_SOLVED="Opgelost"
+COM_KUNENA_LABELS_MERGED="Samengevoegd"
+COM_KUNENA_LABELS_DELETED="Verwijderd"
+COM_KUNENA_DISABLED="Uitgeschakeld"
+COM_KUNENA_ENABLED_TOPIC="Onderwerp-id"
+COM_KUNENA_ENABLED_LABEL="Aangepaste id"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
