--- a/src/components/com_kunena/language/bg-BG/bg-BG.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/bg-BG/bg-BG.com_kunena.templates.ini
@@ -654,6 +654,10 @@ COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_COLOR = "Модератор"
 ; COM_KUNENA_DISABLED="Disabled"
 ; COM_KUNENA_ENABLED_TOPIC="Topic id"
 ; COM_KUNENA_ENABLED_LABEL="Custom id"
+; COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Load external icons"
+; COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Load the cdn glyphicons css file"
+; COM_KUNENA_TEMPLATE_BORDERLESS="Hide table borders"
+; COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Remove the border around the tables"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
