--- a/src/components/com_kunena/language/da-DK/da-DK.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/da-DK/da-DK.com_kunena.templates.ini
@@ -654,6 +654,10 @@ COM_KUNENA_LABELS_DELETED="Slettet"
 COM_KUNENA_DISABLED="Inaktiveret"
 COM_KUNENA_ENABLED_TOPIC="Emne-id"
 COM_KUNENA_ENABLED_LABEL="Brugerdefineret id"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Indlæse eksterne ikoner"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Indlæs cdn glyphicons css fil"
+COM_KUNENA_TEMPLATE_BORDERLESS="Skjul tabelkanter"
+COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Ophæv tabelkanter"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
