--- a/src/components/com_kunena/language/de-DE/de-DE.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/de-DE/de-DE.com_kunena.templates.ini
@@ -654,6 +654,10 @@ COM_KUNENA_LABELS_DELETED="Gelöscht"
 COM_KUNENA_DISABLED="Deaktiviert"
 COM_KUNENA_ENABLED_TOPIC="Themen-ID"
 COM_KUNENA_ENABLED_LABEL="Benutzerdefinierte-ID"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Lade externe Symbole"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Lade die cdn Glyphicons css Datei"
+COM_KUNENA_TEMPLATE_BORDERLESS="Tabellenrahmen entfernen"
+COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Rahmen von den Tabellen entfernen."
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
