--- a/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.templates.ini
@@ -654,6 +654,10 @@ COM_KUNENA_LABELS_DELETED="Supprimé"
 COM_KUNENA_DISABLED="Désactivé"
 COM_KUNENA_ENABLED_TOPIC="Id du sujet"
 COM_KUNENA_ENABLED_LABEL="Id personalisé"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Chargez des icônes externes"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Chargez le fichier css  glyphicons par cdn"
+COM_KUNENA_TEMPLATE_BORDERLESS="Masquer la bordure de tables"
+COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Supprimer la bordure autour des tables"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
