--- a/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.ini
+++ b/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.ini
@@ -434,7 +434,7 @@ COM_KUNENA_POST_TOPIC_HISTORY = "Onderwerp geschiedenis van"
 ; JROOT/components/com_kunena/template/crypsis/html/topic/moderate.php
 
 COM_KUNENA_POST_MODERATION_PROCEED = "Gaan"
-COM_KUNENA_TITLE_MODERATE_MESSAGE = "Matige bericht"
+COM_KUNENA_TITLE_MODERATE_MESSAGE = "Modereer bericht"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topics/
 
@@ -474,12 +474,12 @@ COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Auteur"
 
 COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Snel antwoord"
 COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Actie"
-COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Matig"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Modereer"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/actions.php
 
 COM_KUNENA_TOPIC_ACTIONS_LABEL_ACTION = "Actie"
-COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Matiging"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Moderatie"
 COM_KUNENA_TOPIC_ACTIONS_LABEL_LAYOUT = "Lay-out"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/row/table.php
