--- a/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
@@ -654,6 +654,10 @@ COM_KUNENA_LABELS_DELETED="Verwijderd"
 COM_KUNENA_DISABLED="Uitgeschakeld"
 COM_KUNENA_ENABLED_TOPIC="Onderwerp-id"
 COM_KUNENA_ENABLED_LABEL="Aangepaste id"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Laad externe iconen"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Laad cdn glyphicons css bestand"
+; COM_KUNENA_TEMPLATE_BORDERLESS="Hide table borders"
+; COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Remove the border around the tables"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
