--- a/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.controllers.ini
@@ -81,7 +81,7 @@ COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Olet muuttanut ääntäsi."
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Äänet poistettu onnistuneesti"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Olet antanut äänesi."
 COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="Sinulla on liian monta linkkiä viestissäsi, vähennä niiden määrää."
-; COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "You cannot put an URL in the subject of the topic or message."
+COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "Et voi lisätä URL-osoitetta aiheen tai viestin otsikkoon."
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
