--- a/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/fi-FI/fi-FI.com_kunena.templates.ini
@@ -41,8 +41,8 @@ COM_KUNENA_ANN_LONGTEXT = "Pitkä teksti"
 COM_KUNENA_ANN_PUBLISH = "Julkaise"
 COM_KUNENA_ANN_READMORE = "Lue lisää..."
 COM_KUNENA_ANN_SHOWDATE = "Näytä päiväys"
-; COM_KUNENA_ANN_DATE_UP = "Publish Date"
-; COM_KUNENA_ANN_DATE_DOWN = "Unpublish Date"
+COM_KUNENA_ANN_DATE_UP = "Julkaisupäivä"
+COM_KUNENA_ANN_DATE_DOWN = "Piilotuspäivä"
 COM_KUNENA_ANN_SORTTEXT = "Lyhyt teksti"
 COM_KUNENA_ANN_TITLE = "Otsikko"
 COM_KUNENA_ATTACHMENTS = "Liitetiedostot:"
@@ -352,7 +352,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS="Aihekuvakkeet"
 COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Ota käyttöön aihekuvakkeiden css"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Lataa ulkoinen CDN Fontawesome"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Lataa ulkoinen CDN Fontawesome"
-; COM_KUNENA_TEMPLATE_NONE="Normal"
+COM_KUNENA_TEMPLATE_NONE="Normaali"
 COM_KUNENA_TEMPLATE_NORMAL="Oletus"
 COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
 COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
@@ -362,19 +362,19 @@ COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES="Tässä viestissä on tiedostoja 
 COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE="Tässä viestissä on kuva liitetiedostona.<br /> Kirjaudu sisään tai rekisteröidy nähdäksesi se."
 COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="Tässä viestissä on tiedosto liitetiedostona.<br /> Kirjaudu sisään tai rekisteröidy nähdäksesi se."
 COM_KUNENA_AUP_MEDALS = "Mitalit:"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="How to show Whoisonline users"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Name"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
-; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Load Bootstrap css"
-; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Load Bootstrap css for none Bootstrap templates"
-; COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Write Access"
-; COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Show the access rights on the bottom of the topics"
-; COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Show Instagram"
-; COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Show Instagram"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Show Soundcloud"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Show Soundcloud"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="Miten näyttää Whoisonline-käyttäjät"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Nimi"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Hahmokuva"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Molemmat"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Lataa Bootstrap CSS"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Lataa Bootstrap CSS sitä käyttämättömille sivupohjille"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Kirjoitusoikeus"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Näytä käyttöoikeudet aiheiden alla"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Näytä Instagram"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Näytä Instagram"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Näytä Soundcloud"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Näytä Soundcloud"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
@@ -577,93 +577,97 @@ COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC = "Merkityksen väri valvojille."
 COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR = "Käyttäjien väri"
 COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Merkityksen väri käyttäjille."
 COM_KUNENA_TEMPLATE_TABS = "Välilehdet"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
-; COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
-; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Show announcements"
-; COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
-; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
-; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show emoticons on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show twitter on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show ebay"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show link"
-; COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show link on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show picture"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show picture on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show hide"
-; COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show hide on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show spoiler"
-; COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Show spoiler on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Show table"
-; COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Show table on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Show code"
-; COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Show code on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Show quote"
-; COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Show quote on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Show divider"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Show divider on editor"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
-; COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
-; COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
-; COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Social Theme"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Select the theme for social buttons"
-; COM_KUNENA_CLASSIC="Classic"
-; COM_KUNENA_FLAT="Flat"
-; COM_KUNENA_MINIMA="Minima"
-; COM_KUNENA_PLAIN="Plain"
-; COM_KUNENA_ACCESS_ALLOWED="Allowed:"
-; COM_KUNENA_ACCESS_NOTALLOWED="Not Allowed:"
-; COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="to create new topic."
-; COM_KUNENA_ACCESS_ALLOWED_REPLY=" to reply."
-; COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
-; COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
-; COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
-; COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
-; COM_KUNENA_LABELS_QUESTION="Question"
-; COM_KUNENA_LABELS_IMPORTANT="Important"
-; COM_KUNENA_LABELS_IDEA="Idea"
-; COM_KUNENA_LABELS_LOVED="Loved"
-; COM_KUNENA_LABELS_SOLVED="Solved"
-; COM_KUNENA_LABELS_MERGED="Merged"
-; COM_KUNENA_LABELS_DELETED="Deleted"
-; COM_KUNENA_DISABLED="Disabled"
-; COM_KUNENA_ENABLED_TOPIC="Topic id"
-; COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox väri"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Valitse Lightbox väri"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "Valkoinen"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Musta"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Viestin otsikon pituus"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Näytä valikko"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Näytä valikko foorumilla"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Näytä moduulit"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Näytä moduulit foorumilla"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Näytä murupolku"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Näytä murupolku foorumilla"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Näytä ilmoitukset"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Näytä ilmoitukset foorumilla"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Näytä alatunniste"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Näytä alatunniste foorumilla"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Näytä video"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Näytä video editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Näytä kartat"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Näytä kartat editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Näytä hymiöt"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Näytä hymiöt editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Näytä twitter"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Näytä twitter editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Näytä ebay"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Näytä ebay on editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Näytä linkki"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Näytä linkki editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Näytä kuva"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Näytä kuva editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Näytä piilota"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Näytä piilota editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Näytä spoileri"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Näytä spoileri editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Näytä taulukko"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Näytä taulukko editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Näytä koodi"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Näytä koodi editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Näytä lainaus"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Näytä lainaus editorissa"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Näytä jakaja"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Näytä jakaja editorissa"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Viestin otsikon enimmäispituus viestissä"
+COM_KUNENA_TEMPLATE_RECOVER="Palaudu virheestä ja tallenna kentät"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="Tämä muistaa tiedot viesteistäsi, virheen tapahtuessa tai tiedon siirtämisessä pikavastauksesta editoriin"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Kategorian oletuskuvake"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Kategorian oletuskuvake, oletus on icon-folder"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Valitse kategorioiden kuvakkeiden väri"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Valitse kategorioiden kuvakkeiden väri"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Valitse UUSI-kuvakkeen väri ja teksti"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Valitse UUSI-kuvakkeen väri ja teksti"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Viestin kirjoitus"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Näytä some jakotoiminnot"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Tarvitsee fontawesomen kuvakkeita varten"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Some teema"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Valitse teema some-napeille"
+COM_KUNENA_CLASSIC="Klassinen"
+COM_KUNENA_FLAT="Litteä"
+COM_KUNENA_MINIMA="Minimaalinen"
+COM_KUNENA_PLAIN="Yksinkertainen"
+COM_KUNENA_ACCESS_ALLOWED="Sallittu:"
+COM_KUNENA_ACCESS_NOTALLOWED="Kielletty:"
+COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="luoda aihe."
+COM_KUNENA_ACCESS_ALLOWED_REPLY="vastata."
+COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="lisätä liitteitä."
+COM_KUNENA_ACCESS_ALLOWED_EDITPOST="muokata viestiäsi."
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Kategorian kuvien polku"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Kategorian kuvien polku. Jos asetat category_images, niin koko polku on your_html_rootfolder/media/kunena/category_images/"
+COM_KUNENA_LABELS_QUESTION="Kysymys"
+COM_KUNENA_LABELS_IMPORTANT="Tärkeä"
+COM_KUNENA_LABELS_IDEA="Idea"
+COM_KUNENA_LABELS_LOVED="Rakastettu"
+COM_KUNENA_LABELS_SOLVED="Ratkaistu"
+COM_KUNENA_LABELS_MERGED="Yhdistetty"
+COM_KUNENA_LABELS_DELETED="Poistettu"
+COM_KUNENA_DISABLED="Poistettu käytöstä"
+COM_KUNENA_ENABLED_TOPIC="Aiheen id"
+COM_KUNENA_ENABLED_LABEL="Oma id"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Lataa ulkoiset kuvakkeet"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Lataa cdn glyphicons css-tiedosto"
+; COM_KUNENA_TEMPLATE_BORDERLESS="Hide table borders"
+; COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Remove the border around the tables"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Forum Header Background"
-; COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Hover Tab Color"
-; COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Enter the color of the menu tab when hovered over."
-; COM_KUNENA_TEMPLATE_SKINNER = "Blend with Joomla Template"
-; COM_KUNENA_TEMPLATE_SKINNER_DESC = "Automatically blend the default template with the colors or you Joomla template."
-; COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Toggler Color"
-; COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Enter the color of the section toggler button."
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Foorumin otsikon taustaväri"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Välilehden kursorin kohdistuksen väri"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Anna valikon välilehden kursorin kohdistuksen väri."
+COM_KUNENA_TEMPLATE_SKINNER = "Sulautus Joomla!-sivupohjan kanssa"
+COM_KUNENA_TEMPLATE_SKINNER_DESC = "Sulauta oletussivupohjan värit automaattisesti Joomla-sivupohjasi kanssa."
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Supista/Laajenna väri"
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Anna väri alueiden Supista/Laajenna -painikkeelle."
 
 ; Removed strings
 
