--- a/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.views.ini
+++ b/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.views.ini
@@ -125,7 +125,7 @@ COM_KUNENA_SELECT_CATEGORY = "- Choisir une catégorie -"
 COM_KUNENA_VIEW_DISABLED = "L'administrateur a désactivé l'accès en écriture pour le public."
 COM_KUNENA_VIEW_TOPICS_DEFAULT = "Sujet : %s"
 COM_KUNENA_VIEW_TOPIC_ERROR_LOOP = "Erreur interne : Boucle détectée dans des sujets déplacés !"
-COM_KUNENA_LOGIN_PLEASE = "S'il vous plaît  %s %s à se joindre à la conversation."
+COM_KUNENA_LOGIN_PLEASE = " %s %s pour participer à la conversation."
 COM_KUNENA_LOGIN_OR = "ou"
 
 ; JROOT/components/com_kunena/views/topics/
