--- a/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.controllers.ini
@@ -11,11 +11,11 @@
 
 ; JROOT/components/com_kunena/controllers/announcement.php
 
-COM_KUNENA_ANN_DELETED = "Törlés sikeres"
-COM_KUNENA_ANN_SUCCESS_ADD = "Hozzáadás sikeres"
-COM_KUNENA_ANN_SUCCESS_EDIT = "Szerkesztés sikeres"
-COM_KUNENA_ANN_SUCCESS_PUBLISH = "'%s' bejelentés sikeresen közzétéve!"
-COM_KUNENA_ANN_SUCCESS_UNPUBLISH = "'%s' bejelentés sikeresen visszavonva!"
+COM_KUNENA_ANN_DELETED = "Közlemény törölve"
+COM_KUNENA_ANN_SUCCESS_ADD = "Közlemény hozzáadva"
+COM_KUNENA_ANN_SUCCESS_EDIT = "Közlemény szerkesztve"
+COM_KUNENA_ANN_SUCCESS_PUBLISH = "'%s' közlemény sikeresen közzétéve!"
+COM_KUNENA_ANN_SUCCESS_UNPUBLISH = "'%s' közlemény sikeresen visszavonva!"
 
 ; JROOT/components/com_kunena/controllers/category.php
 
@@ -81,7 +81,7 @@ COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Megváltoztattad a szavazatod!"
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Szavazatok sikeresen visszaállítva"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Sikeresen szavaztál!"
 COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="Túl sok hivatkozást tartalmaz a hozzászólásod, ezért kérjük, hogy csökkentsd őket!"
-; COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "You cannot put an URL in the subject of the topic or message."
+COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "Nem tehetsz URL-címet a téma címébe vagy üzenetébe."
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
