--- a/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.ini
+++ b/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.ini
@@ -134,8 +134,8 @@ COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Fájlok hozzáadása..."
 COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Húzd be ide a fájlokat, vagy használt a tallózás gombot"
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "A profilkép a média könyvtárba való másolásakor hiba történt."
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "A profilkép mérete nagyobb, mint a beállításokban meghatározott limit."
-; COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Insert All"
-; COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Remove All"
+COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Összes beillesztése"
+COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Összes eltávolítása"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "A csatolt fájl mérete nagyobb, mint a beállításokban meghatározott limit."
 COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "A csatolt fájl mérete meghaladja a beállításokban meghatározott limitet."
 
@@ -293,228 +293,228 @@ COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Profil mentése nem sikerült"
 COM_KUNENA_PROFILE_SAVE_ERROR="Hiba a profil metése közben"
 COM_KUNENA_THANKYOU_MORE_USERS = "és ez a felhasználó %s további személytől kapott köszönetet"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="A téma beavatkozást igényel"
-; COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Profile saved."
+COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Profil mentése sikerült."
 COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Csatolt kép beküldése csak moderátorok számára engedélyezett"
-; COM_KUNENA_TEAM_MEMBER="Team Member"
-; COM_KUNENA_X_TOPICS_0 = "No topics"
-; COM_KUNENA_X_TOPICS_1 = "%s topic"
-; COM_KUNENA_X_TOPICS_MORE = "%s topics"
-; COM_KUNENA_BY_X = "by %s"
-; COM_KUNENA_FAVORITE = "Favorite"
-; COM_KUNENA_MYPOSTS = "Contains my posts"
-; COM_KUNENA_TOPIC_STARTED_ON = "Topic started"
-; COM_KUNENA_VIEW_NO_POSTS = "There are no posts in this category."
-; COM_KUNENA_VIEW_NO_TOPICS = "There are no topics to display."
-; COM_KUNENA_NEW_TOPIC = "New Topic"
-; COM_KUNENA_USERTYPE = "User Type"
-; COM_KUNENA_X_VIEWS = "%d Views"
-; COM_KUNENA_X_POSTS = "%d Posts"
-; COM_KUNENA_X_THANKS = "%d Thanks"
-; COM_KUNENA_EMAIL = "E-Mail"
-; COM_KUNENA_REPLYTO_X = "Reply to %s"
+COM_KUNENA_TEAM_MEMBER="Csapattag"
+COM_KUNENA_X_TOPICS_0 = "Nincsenek témák"
+COM_KUNENA_X_TOPICS_1 = "%s téma"
+COM_KUNENA_X_TOPICS_MORE = "%s téma"
+COM_KUNENA_BY_X = "írta %s"
+COM_KUNENA_FAVORITE = "Kedvenc"
+COM_KUNENA_MYPOSTS = "Tartalmazza a hozzászólásaimat"
+COM_KUNENA_TOPIC_STARTED_ON = "Létrehozva"
+COM_KUNENA_VIEW_NO_POSTS = "Nincsenek hozzászólások  ebben a kategóriában."
+COM_KUNENA_VIEW_NO_TOPICS = "Nincs megjeleníthető téma."
+COM_KUNENA_NEW_TOPIC = "Új téma"
+COM_KUNENA_USERTYPE = "Felhasználótípus"
+COM_KUNENA_X_VIEWS = "%d megtekintés"
+COM_KUNENA_X_POSTS = "%d hozzászólás"
+COM_KUNENA_X_THANKS = "%d köszönet"
+COM_KUNENA_EMAIL = "Ímél"
+COM_KUNENA_REPLYTO_X = "Válasz %s üzenetére"
 
-; COM_KUNENA_X_HIDDEN = "%d hidden"
-; COM_KUNENA_SEE_ALL_SUBJECTS = "See Complete List of Subjects"
-; COM_KUNENA_SEE_MORE = "See More..."
+COM_KUNENA_X_HIDDEN = "%d rejtett"
+COM_KUNENA_SEE_ALL_SUBJECTS = "A témák teljes listájának megtekintése"
+COM_KUNENA_SEE_MORE = "Bővebben"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/default.php
 
-; COM_KUNENA_FORUM_HEADER = "Category Header"
-; COM_KUNENA_GEN_GOTOBOTTOM = "Go to bottom"
+COM_KUNENA_FORUM_HEADER = "Kategória-fejléc"
+COM_KUNENA_GEN_GOTOBOTTOM = "Ugrás az aljára"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/list.php
 
-; COM_KUNENA_MARK_ALL_READ = "Mark All Read"
-; COM_KUNENA_MARK_CATEGORIES_READ = "Mark Read"
+COM_KUNENA_MARK_ALL_READ = "Összes megjelölése olvasottként"
+COM_KUNENA_MARK_CATEGORIES_READ = "Megjelölés olvasottként"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/list_embed.php
 
-; COM_KUNENA_GEN_NOFORUMS = "There are no categories in the section!"
-; COM_KUNENA_LOCKED_CATEGORY = "Category is locked"
-; COM_KUNENA_SHOWCAT_PENDING = "pending message(s)"
-; COM_KUNENA_CATEGORIES_LABEL_CREATECATEGORY = "New Category"
-; COM_KUNENA_CATEGORIES_LABEL_EDITSECTION = "Edit Section"
-; COM_KUNENA_CATEGORIES_LABEL_GETRSS = "Get the latest posts directly to your desktop"
-; COM_KUNENA_CATEGORIES_LABEL_MARKCATEGORYREAD = "Mark category read"
+COM_KUNENA_GEN_NOFORUMS = "Nincsenek kategóriák ebben a szekcióban!"
+COM_KUNENA_LOCKED_CATEGORY = "Kategória zárolva"
+COM_KUNENA_SHOWCAT_PENDING = "várakozó hozzászólás(ok)"
+COM_KUNENA_CATEGORIES_LABEL_CREATECATEGORY = "Új kategória"
+COM_KUNENA_CATEGORIES_LABEL_EDITSECTION = "Szekció szerkesztése"
+COM_KUNENA_CATEGORIES_LABEL_GETRSS = "A legfrissebb hozzászólások lekérése közvetlenül az asztalra"
+COM_KUNENA_CATEGORIES_LABEL_MARKCATEGORYREAD = "Kategória megjelölése olvasottként"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/manage.php
 
-; COM_KUNENA_PUBLICACCESS = "Public Access"
+COM_KUNENA_PUBLICACCESS = "Nyilvános hozzáférés"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/user_row.php
 
-; COM_KUNENA_MY_POSTS = "Posts"
+COM_KUNENA_MY_POSTS = "Hozzászólások"
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/statistics.php
 
-; COM_KUNENA_STAT_USERLIST = "User List"
+COM_KUNENA_STAT_USERLIST = "Felhasználói lista"
 
 ; JROOT/components/com_kunena/template/crypsis/html/search/default.php
 
-; COM_KUNENA_FORUM_SEARCHRESULTS = "Displaying %s out of %s results."
-; COM_KUNENA_SEARCH_ANSWERS = "Answers"
-; COM_KUNENA_SEARCH_FIND_WITH = "Find topics with"
-; COM_KUNENA_SEARCH_LEAST = "At least"
-; COM_KUNENA_SEARCH_MOST = "At most"
-; COM_KUNENA_SEARCH_OPTIONS = "Search Options"
-; COM_KUNENA_SEARCH_USER_ACTIVE = "Activity in Topics"
-; COM_KUNENA_SEARCH_USER_POSTED = "Messages posted by"
-; COM_KUNENA_SEARCH_USER_STARTED = "Topics started by"
+COM_KUNENA_FORUM_SEARCHRESULTS = "%s találat megjelenítése %s találatból."
+COM_KUNENA_SEARCH_ANSWERS = "Válaszok"
+COM_KUNENA_SEARCH_FIND_WITH = "Az alábbi"
+COM_KUNENA_SEARCH_LEAST = "Legalább"
+COM_KUNENA_SEARCH_MOST = "Legfeljebb"
+COM_KUNENA_SEARCH_OPTIONS = "Keresési beállítások"
+COM_KUNENA_SEARCH_USER_ACTIVE = "Aktivitás a témákban"
+COM_KUNENA_SEARCH_USER_POSTED = "Hozzászólások elküldve"
+COM_KUNENA_SEARCH_USER_STARTED = "Beküldő:"
 
 ; JROOT/components/com_kunena/template/crypsis/html/statistics/default.php
 
-; COM_KUNENA_STAT_GENERAL_STATS = "General Statistics"
+COM_KUNENA_STAT_GENERAL_STATS = "Általános statisztikák"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_actions.php
 
-; COM_KUNENA_GEN_GOTO = "Goto"
+COM_KUNENA_GEN_GOTO = "Ugrás"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_message_actions.php
 
-; COM_KUNENA_REPORT = "Report to moderator"
-; COM_KUNENA_THANKYOU = "The following user(s) said Thank You"
+COM_KUNENA_REPORT = "Jelentés moderátornak"
+COM_KUNENA_THANKYOU = "A következő felhasználók mondtak köszönetet"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_pollresults.php
 
-; COM_KUNENA_TOPIC_VOTE_RESET = "Reset Votes"
+COM_KUNENA_TOPIC_VOTE_RESET = "Szavazatok visszaállítása"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit.php
 
-; COM_KUNENA_EDITOR_ADD_FILE = "Add File"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_SUBJECT = "Enter the subject"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_EMAIL = "Enter the email"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_AUTHORNAME = "Enter the name of author"
-; COM_KUNENA_UPLOAD_MAX_FILES_WEIGHT = "Maximum File Size"
-; COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT = "Maximum Image File Size"
+COM_KUNENA_EDITOR_ADD_FILE = "Fájl hozzáadása"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_SUBJECT = "Tárgy megadása"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_EMAIL = "Ímél megadása"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_AUTHORNAME = "Szerző nevének megadása"
+COM_KUNENA_UPLOAD_MAX_FILES_WEIGHT = "Maximális fájlméret"
+COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT = "Maximális képfájlméret"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/edit/editor/default.php
 
-; COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Map Settings"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Type"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Zoom level"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="City"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hybrid"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Roadmap"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Terrain"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Satellite"
-; COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Code Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Picture Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Size"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Link Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Text"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Size"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Width"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Height"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Url Provider"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Poll Settings"
-; COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Add"
-; COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Close modal"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Video Settings"
+COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Térképbeállítások"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Típus"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Nagyítási szint"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="Város"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hibrid"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Autóstérkép"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Domborzat"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Műhold"
+COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Kódbeállítások"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Képbeállítások"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Méret"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Hivatkozás beállítások"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Szöveg"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Méret"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Szélesség"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Magasság"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="AZ"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="URL szolgáltató"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Szavazás beállítások"
+COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Hozzáadás"
+COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Modal bezárása"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Videó beállítások"
 
 ; Rating
 
-; COM_KUNENA_TOPIC_RATING_ROCKS = "Great"
-; COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Good"
-; COM_KUNENA_TOPIC_RATING_MEH = "Medium"
-; COM_KUNENA_TOPIC_RATING_KINDABAD = "Bad"
-; COM_KUNENA_TOPIC_RATING_SUCKS = "Very bad"
-; COM_KUNENA_RATE_LOGIN = "You need to be logged to add rate"
-; COM_KUNENA_RATE_NOT_YOURSELF = "You cannot rate your own topic"
-; COM_KUNENA_RATE_ALLREADY = "You have already gived a rate"
-; COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "The star has been successfully saved"
+COM_KUNENA_TOPIC_RATING_ROCKS = "Nagyszerű"
+COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Jó"
+COM_KUNENA_TOPIC_RATING_MEH = "Közepes"
+COM_KUNENA_TOPIC_RATING_KINDABAD = "Rossz"
+COM_KUNENA_TOPIC_RATING_SUCKS = "Nagyon rossz"
+COM_KUNENA_RATE_LOGIN = "Az értékeléshez be kell jelentkezned."
+COM_KUNENA_RATE_NOT_YOURSELF = "Nem értékelheted a saját témád."
+COM_KUNENA_RATE_ALLREADY = "Már értékeltél."
+COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "A csillag sikeresen el lett mentve."
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
-; COM_KUNENA_POST_TOPIC_HISTORY = "Topic History of"
+COM_KUNENA_POST_TOPIC_HISTORY = "Téma előzmények"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/moderate.php
 
-; COM_KUNENA_POST_MODERATION_PROCEED = "Proceed"
-; COM_KUNENA_TITLE_MODERATE_MESSAGE = "Moderate Message"
+COM_KUNENA_POST_MODERATION_PROCEED = "Tovább"
+COM_KUNENA_TITLE_MODERATE_MESSAGE = "Hozzászólás moderálása"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topics/
 
-; COM_KUNENA_LOCKED_TOPIC = "Topic is locked"
+COM_KUNENA_LOCKED_TOPIC = "A téma zárva"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/default_attachments.php
 
-; COM_KUNENA_FILETYPE = "Type"
+COM_KUNENA_FILETYPE = "Típus"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/default_ban.php
 
-; COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "YYYY-MM-DD - HH:MM:SS"
+COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "YYYY-MM-DD - HH:MM:SS"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/edit_avatar.php
 
-; COM_KUNENA_PROFILE_AVATAR_UPLOAD = "Upload New Avatar"
+COM_KUNENA_PROFILE_AVATAR_UPLOAD = "Új profilkép feltöltése"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/list.php
 
-; COM_KUNENA_USRL_REGISTERED_USERS = "%s has <strong>%d</strong> registered users"
+COM_KUNENA_USRL_REGISTERED_USERS = "%s - <strong>%d</strong> regisztrált felhasználó."
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/logout_menu.php
 
-; COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Preferences"
-; COM_KUNENA_LOGOUTMENU_LABEL_HELP = "Help"
+COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Beállítások"
+COM_KUNENA_LOGOUTMENU_LABEL_HELP = "Segitség"
 
 ; JROOT/components/com_kunena/template/crypsis/html/announcement/list.php
 
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_ADD = "Add"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_DELETE = "Delete"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_EDIT = "Edit"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_PUBLISH = "Publish"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_UNPUBLISH = "Unpublish"
-; COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Author"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_ADD = "Hozzáadás"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_DELETE = "Törlés"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_EDIT = "Szerkesztés"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_PUBLISH = "Publikálás"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_UNPUBLISH = "Visszavonás"
+COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Szerző"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/message/actions.php
 
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Quick Reply"
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Action"
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Moderate"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Gyors válasz"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Művelet"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Mérsékelt"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/actions.php
 
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_ACTION = "Action"
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Moderation"
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_LAYOUT = "Layout"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_ACTION = "Tevékenység"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Moderáció"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_LAYOUT = "Elrendezés"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/row/table.php
 
-; COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Question"
+COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Kérdés"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/topic/poll/results/default.php
 
-; COM_KUNENA_TOPIC_MODAL_LABEL_VOTE_RESET = "Confirm Reset of Votes"
-; COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET = "Are you sure that you want to reset all the votes in this poll? This action cannot be reverted."
-; COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE = "Cancel"
-; COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE = "Confirm"
+COM_KUNENA_TOPIC_MODAL_LABEL_VOTE_RESET = "Szavazatok visszaállításának megerősítése"
+COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET = "Biztos vagy benne, hogy alapállapotba szeretnéd tenni a szavazatok számát ebben a szavazásban? Ez a művelet nem vonható vissza."
+COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE = "Mégsem"
+COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE = "Megerősítés"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/announcement/edit/default.php
 
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_TITLE = "Enter the title of announcement"
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_SDESCRIPTION = "Enter the short description of announcement"
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION = "Enter the full description of announcement"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_TITLE = "Közlemény címének megadása"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_SDESCRIPTION = "Közlemény rövid leírásának megadása"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION = "Közlemény teljes leírásának megadása"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/user/profile/default.php
 
-; COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS = "Less"
-; COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE = "More"
-; COM_KUNENA_TOPIC_AUTHOR="Topic Author"
-; COM_KUNENA_MODERATOR="Moderator"
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS = "Kevesebb"
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE = "Több"
+COM_KUNENA_TOPIC_AUTHOR="Témaindító"
+COM_KUNENA_MODERATOR="Moderátor"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/user/item/summary/default.php
-; COM_KUNENA_PROFILE_VIEWS = "Profile views"
-; COM_KUNENA_THANK_YOU_RECEIVED = "Thank you received"
+COM_KUNENA_PROFILE_VIEWS = "Profilmegtekintések"
+COM_KUNENA_THANK_YOU_RECEIVED = "Köszönetek"
 
 ; new Crypsis
-; COM_KUNENA_GEN_CATEGORY = "Category"
-; COM_KUNENA_GEN_MESSAGE = "Message"
-; COM_KUNENA_GEN_AUTHOR = "Author"
-; COM_KUNENA_EDITOR_EMOTICONS_LABEL = "Emoticons"
-; COM_KUNENA_TOPICLIST_AUTHOR_LABEL = "Author"
-; COM_KUNENA_EDITOR_SMILIES = "Smilies"
-; COM_KUNENA_EDITOR_HELPLINE_SMILIES = "Select a smiley in the list below or use emojis in the textarea"
+COM_KUNENA_GEN_CATEGORY = "Kategória"
+COM_KUNENA_GEN_MESSAGE = "Üzenet"
+COM_KUNENA_GEN_AUTHOR = "Szerző"
+COM_KUNENA_EDITOR_EMOTICONS_LABEL = "Hangulatjelek"
+COM_KUNENA_TOPICLIST_AUTHOR_LABEL = "Szerző"
+COM_KUNENA_EDITOR_SMILIES = "Szmájlik"
+COM_KUNENA_EDITOR_HELPLINE_SMILIES = "Válassz ki egy hangulatjelet az alábbi listából, vagy használd a hangulatjeleket a szövegmezőben."
