--- a/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.templates.ini
@@ -41,8 +41,8 @@ COM_KUNENA_ANN_LONGTEXT = "Teljes szöveg"
 COM_KUNENA_ANN_PUBLISH = "Közzétéve"
 COM_KUNENA_ANN_READMORE = "Bővebben..."
 COM_KUNENA_ANN_SHOWDATE = "Dátum kijelzése"
-; COM_KUNENA_ANN_DATE_UP = "Publish Date"
-; COM_KUNENA_ANN_DATE_DOWN = "Unpublish Date"
+COM_KUNENA_ANN_DATE_UP = "Közzététel dátuma"
+COM_KUNENA_ANN_DATE_DOWN = "Visszavonás dátuma"
 COM_KUNENA_ANN_SORTTEXT = "Rövid szöveg"
 COM_KUNENA_ANN_TITLE = "Cím"
 COM_KUNENA_ATTACHMENTS = "Mellékletek:"
@@ -352,7 +352,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS="Témaikonok"
 COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Témaikon css engedélyezése"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Külső CDN Fontawesome betöltése"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Külső CDN Fontawesome betöltése"
-; COM_KUNENA_TEMPLATE_NONE="Normal"
+COM_KUNENA_TEMPLATE_NONE="Normál"
 COM_KUNENA_TEMPLATE_NORMAL="Alapértelmezett"
 COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
 COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
@@ -362,19 +362,19 @@ COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES="Ez az üzenet csatolt fájlokat t
 COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE="Ez az üzenet csatolt képet tartalmaz.<br /> Kérjük, hogy jentkezz be vagy regisztrálj a megtekintéshez."
 COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="Ez az üzenet csatolt fájlt tartalmaz.<br /> Kérjük, hogy jentkezz be vagy regisztrálj a megtekintéshez."
 COM_KUNENA_AUP_MEDALS = "Érmék:"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="How to show Whoisonline users"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Name"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
-; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Load Bootstrap css"
-; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Load Bootstrap css for none Bootstrap templates"
-; COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Write Access"
-; COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Show the access rights on the bottom of the topics"
-; COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Show Instagram"
-; COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Show Instagram"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Show Soundcloud"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Show Soundcloud"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Kivanitt"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="Hogyan jelenjenek meg a jelenlévő felhasználók"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Név"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Profilkép"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Mindkettő"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Bootstrap css betöltése"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Bootstrap css betöltése a nem Bootstrap alapú sablonok számára"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Írási jog"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Hozzáférési jogok megjelenítése a téma alján."
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Instagram megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Instagram megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Soundcloud megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Soundcloud megjelenítése"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
@@ -577,93 +577,97 @@ COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC = "Moderátor jelmagyarázatának szí
 COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR = "Felhasználó színe"
 COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Felhasználó jelmagyarázatának színe"
 COM_KUNENA_TEMPLATE_TABS = "Tabulátorok"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
-; COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
-; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Show announcements"
-; COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
-; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
-; COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
-; COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show emoticons on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
-; COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show twitter on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show ebay"
-; COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show link"
-; COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show link on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show picture"
-; COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show picture on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show hide"
-; COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show hide on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show spoiler"
-; COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Show spoiler on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Show table"
-; COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Show table on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Show code"
-; COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Show code on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Show quote"
-; COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Show quote on editor"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Show divider"
-; COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Show divider on editor"
-; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
-; COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
-; COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
-; COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
-; COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
-; COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Social Theme"
-; COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Select the theme for social buttons"
-; COM_KUNENA_CLASSIC="Classic"
-; COM_KUNENA_FLAT="Flat"
-; COM_KUNENA_MINIMA="Minima"
-; COM_KUNENA_PLAIN="Plain"
-; COM_KUNENA_ACCESS_ALLOWED="Allowed:"
-; COM_KUNENA_ACCESS_NOTALLOWED="Not Allowed:"
-; COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="to create new topic."
-; COM_KUNENA_ACCESS_ALLOWED_REPLY=" to reply."
-; COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
-; COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
-; COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
-; COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
-; COM_KUNENA_LABELS_QUESTION="Question"
-; COM_KUNENA_LABELS_IMPORTANT="Important"
-; COM_KUNENA_LABELS_IDEA="Idea"
-; COM_KUNENA_LABELS_LOVED="Loved"
-; COM_KUNENA_LABELS_SOLVED="Solved"
-; COM_KUNENA_LABELS_MERGED="Merged"
-; COM_KUNENA_LABELS_DELETED="Deleted"
-; COM_KUNENA_DISABLED="Disabled"
-; COM_KUNENA_ENABLED_TOPIC="Topic id"
-; COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox szín"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "A Lightbox színének kiválasztása"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "Fehér"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Fekete"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Üzenet címének hossza"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Menü megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Menü megjelenítése a fórumban"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Modulok megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Modulok megjelenítése a fórumban"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Útkövetés megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Útkövetés megjelenítése a fórumban"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Közlemények megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Közlemények megjelenítése a fórumban"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Lábléc megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Lábléc megjelenítése a fórumban"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Videó megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Videó megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Térképek megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Térképek megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Hagulatjelek megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Hangulatjelek megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Twitter megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Twitter megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Ebay megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Ebay megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Hivatkozás megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Hivatkozás megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Kép megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Kép megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Rejtett tartalom megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Rejtett tartalom megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Szpojler megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Szpojler megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Táblázat megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Táblázat megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Kód megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Kód megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Idézet megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Idézet megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Elválasztó megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Elválasztó megjelenítése a szerkesztőben"
+COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. üzenet címhosszúság"
+COM_KUNENA_TEMPLATE_RECOVER="Összeomlási és tárolási mezők visszaállítása"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="Megőrzi üzenetedet összeomláskor vagy az adatok mozgatásakor a gyors válaszból a szerkesztőbe"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Alapértelmezett kategóriaikon"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Az alapértelmezett kategória ikon a mappa ikon"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Kategóriaikonok színeinek kiválasztása"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Kategóriaikonok színeinek kiválasztása"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Szín kiválasztása az ÚJ ikonhoz és szöveghez"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Szín kiválasztása az ÚJ ikonhoz és szöveghez"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Írás"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Közösségi megosztás megjelenítése"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Az ikonok megjelenítéséhez szükség van a fontawesome-ra."
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Közösségi téma"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Közösségi gombok témájának kiválasztása"
+COM_KUNENA_CLASSIC="Klasszikus"
+COM_KUNENA_FLAT="Lapos"
+COM_KUNENA_MINIMA="Minimális"
+COM_KUNENA_PLAIN="Egyszerű"
+COM_KUNENA_ACCESS_ALLOWED="Engedélyezett:"
+COM_KUNENA_ACCESS_NOTALLOWED="Nem engedélyezett:"
+COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="új téma létrehozása."
+COM_KUNENA_ACCESS_ALLOWED_REPLY="válasz."
+COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="melléklet hozzáadása."
+COM_KUNENA_ACCESS_ALLOWED_EDITPOST="hozzászólásod szerkesztése."
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Kategóriakép útvonal"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Kategóriakép útvonala. A category_images útvonal megadása esetén a teljes útvonal a saját_html_gyökérmappa/media/kunena/category_images/ lesz"
+COM_KUNENA_LABELS_QUESTION="Kérdés"
+COM_KUNENA_LABELS_IMPORTANT="Fontos"
+COM_KUNENA_LABELS_IDEA="Ötlet"
+COM_KUNENA_LABELS_LOVED="Szeret"
+COM_KUNENA_LABELS_SOLVED="Megoldva"
+COM_KUNENA_LABELS_MERGED="Bontva"
+COM_KUNENA_LABELS_DELETED="Törölve"
+COM_KUNENA_DISABLED="Letiltva"
+COM_KUNENA_ENABLED_TOPIC="Téma az"
+COM_KUNENA_ENABLED_LABEL="Egyedi az"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Külső ikonok betöltése"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="CDN glyphicons css fájl betöltése"
+COM_KUNENA_TEMPLATE_BORDERLESS="Táblázatszegélyek elrejtése"
+COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Szegélyek eltávolítása a táblázatok körül."
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Forum Header Background"
-; COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Hover Tab Color"
-; COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Enter the color of the menu tab when hovered over."
-; COM_KUNENA_TEMPLATE_SKINNER = "Blend with Joomla Template"
-; COM_KUNENA_TEMPLATE_SKINNER_DESC = "Automatically blend the default template with the colors or you Joomla template."
-; COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Toggler Color"
-; COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "Enter the color of the section toggler button."
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND = "Fórumfejléc háttér"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR = "Kijelölt fül színe"
+COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC = "Az egérrel kijelölt menü fül színkódja."
+COM_KUNENA_TEMPLATE_SKINNER = "Beolvadás a Joomla sablonba"
+COM_KUNENA_TEMPLATE_SKINNER_DESC = "Az alapértelmezett sablon színeinek egybeolvasztása a Joomla sablon színeivel."
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR = "Kapcsológomb színe"
+COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC = "A szekciók csukógombjának színkódja."
 
 ; Removed strings
 
