--- a/src/components/com_kunena/language/it-IT/it-IT.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/it-IT/it-IT.com_kunena.templates.ini
@@ -352,7 +352,7 @@ COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS="Icona Argomento"
 COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Abilita topicons CSS"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Carica la CDN esterna FontAwesome"
 COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Carica la CDN esterna FontAwesome"
-; COM_KUNENA_TEMPLATE_NONE="Normal"
+COM_KUNENA_TEMPLATE_NONE="Normale"
 COM_KUNENA_TEMPLATE_NORMAL="Predefinito"
 COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
 COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
@@ -364,8 +364,8 @@ COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="Questo messaggio ha un file allegato
 COM_KUNENA_AUP_MEDALS = "Medaglie:"
 ; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
 ; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="How to show Whoisonline users"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Name"
-; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Nome"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
 ; COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
 ; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Load Bootstrap css"
 ; COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Load Bootstrap css for none Bootstrap templates"
@@ -579,11 +579,11 @@ COM_KUNENA_TEMPLATE_LEGEND_USER_DESC = "Colore di legenda per gli utenti."
 COM_KUNENA_TEMPLATE_TABS = "Tabs"
 ; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_COLOR = "Lightbox color"
 ; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_DESC = "Select the Lightbox color"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "White"
-; COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_WHITE = "Bianco"
+COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Nero"
 ; COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Mostra menù"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Mostra menù sul forum"
 ; COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
 ; COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
 ; COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
@@ -592,7 +592,7 @@ COM_KUNENA_TEMPLATE_TABS = "Tabs"
 ; COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
 ; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
 ; COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
-; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Mostra video"
 ; COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
 ; COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
 ; COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
@@ -654,6 +654,10 @@ COM_KUNENA_TEMPLATE_TABS = "Tabs"
 ; COM_KUNENA_DISABLED="Disabled"
 ; COM_KUNENA_ENABLED_TOPIC="Topic id"
 ; COM_KUNENA_ENABLED_LABEL="Custom id"
+; COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Load external icons"
+; COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Load the cdn glyphicons css file"
+; COM_KUNENA_TEMPLATE_BORDERLESS="Hide table borders"
+; COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Remove the border around the tables"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
