--- a/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.ini
+++ b/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.ini
@@ -134,8 +134,8 @@ COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Adicionar ficheiros..."
 COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Pode arrastar os ficheiros para aqui ou utilizar o botão de procurar"
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Falha ao mover o ficheiro de avatar para o diretório de media"
 COM_KUNENA_UPLOAD_ERROR_AVATAR_EXCEED_LIMIT_IN_CONFIGURATION = "O tamanho do ficheiro de avatar excede o limite permitido pela configuração"
-; COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Insert All"
-; COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Remove All"
+COM_KUNENA_UPLOADED_LABEL_INSERT_ALL_BUTTON="Inserir todos"
+COM_KUNENA_UPLOADED_LABEL_REMOVE_ALL_BUTTON="Remover todos"
 COM_KUNENA_UPLOAD_ERROR_FILE_EXCEED_LIMIT_IN_CONFIGURATION  = "O tamanho do anexo excede o limite permitido pela configuração"
 COM_KUNENA_UPLOAD_ERROR_IMAGE_EXCEED_LIMIT_IN_CONFIGURATION  = "O tamanho da imagem anexa excede o limite permitido pela configuração"
 
@@ -293,127 +293,127 @@ COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Perfil não guardado"
 COM_KUNENA_PROFILE_SAVE_ERROR="Erro ao guardar o perfil"
 COM_KUNENA_THANKYOU_MORE_USERS = "e este utilizador tem ainda %s outros agradecimentos"
 COM_KUNENA_TOPICS_NEEDS_ATTENTION="Tópicos que necessitam de atenção"
-; COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Profile saved."
+COM_KUNENA_PROFILE_SAVED_BY_MODERATOR="Perfil guardado."
 COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Publicação de ficheiros de imagem só é permitida aos moderadores"
-; COM_KUNENA_TEAM_MEMBER="Team Member"
-; COM_KUNENA_X_TOPICS_0 = "No topics"
-; COM_KUNENA_X_TOPICS_1 = "%s topic"
-; COM_KUNENA_X_TOPICS_MORE = "%s topics"
-; COM_KUNENA_BY_X = "by %s"
-; COM_KUNENA_FAVORITE = "Favorite"
-; COM_KUNENA_MYPOSTS = "Contains my posts"
-; COM_KUNENA_TOPIC_STARTED_ON = "Topic started"
-; COM_KUNENA_VIEW_NO_POSTS = "There are no posts in this category."
-; COM_KUNENA_VIEW_NO_TOPICS = "There are no topics to display."
-; COM_KUNENA_NEW_TOPIC = "New Topic"
-; COM_KUNENA_USERTYPE = "User Type"
-; COM_KUNENA_X_VIEWS = "%d Views"
-; COM_KUNENA_X_POSTS = "%d Posts"
-; COM_KUNENA_X_THANKS = "%d Thanks"
-; COM_KUNENA_EMAIL = "E-Mail"
-; COM_KUNENA_REPLYTO_X = "Reply to %s"
+COM_KUNENA_TEAM_MEMBER="Equipa de membros"
+COM_KUNENA_X_TOPICS_0 = "Sem tópicos"
+COM_KUNENA_X_TOPICS_1 = "%s tópico"
+COM_KUNENA_X_TOPICS_MORE = "%s tópicos"
+COM_KUNENA_BY_X = " por %s"
+COM_KUNENA_FAVORITE = "Favorito"
+COM_KUNENA_MYPOSTS = "Contém as minhas mensagens"
+COM_KUNENA_TOPIC_STARTED_ON = "Tópico iniciado"
+COM_KUNENA_VIEW_NO_POSTS = "Não há mensagens nesta categoria."
+COM_KUNENA_VIEW_NO_TOPICS = "Não existem tópicos para mostrar."
+COM_KUNENA_NEW_TOPIC = "Novo Tópico"
+COM_KUNENA_USERTYPE = "Tipo de utilizador"
+COM_KUNENA_X_VIEWS = "%d acessos"
+COM_KUNENA_X_POSTS = "%d mensagens"
+COM_KUNENA_X_THANKS = "%d agradecimentos"
+COM_KUNENA_EMAIL = "E-mail"
+COM_KUNENA_REPLYTO_X = "Respondido por %s"
 
-; COM_KUNENA_X_HIDDEN = "%d hidden"
-; COM_KUNENA_SEE_ALL_SUBJECTS = "See Complete List of Subjects"
-; COM_KUNENA_SEE_MORE = "See More..."
+COM_KUNENA_X_HIDDEN = "%d ocultos"
+COM_KUNENA_SEE_ALL_SUBJECTS = "Ver a lista completa de assuntos"
+COM_KUNENA_SEE_MORE = "Ver mais..."
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/default.php
 
-; COM_KUNENA_FORUM_HEADER = "Category Header"
-; COM_KUNENA_GEN_GOTOBOTTOM = "Go to bottom"
+COM_KUNENA_FORUM_HEADER = "Cabeçalho da Categoria"
+COM_KUNENA_GEN_GOTOBOTTOM = "Ir para baixo"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/list.php
 
-; COM_KUNENA_MARK_ALL_READ = "Mark All Read"
-; COM_KUNENA_MARK_CATEGORIES_READ = "Mark Read"
+COM_KUNENA_MARK_ALL_READ = "Marcar tudo como lido"
+COM_KUNENA_MARK_CATEGORIES_READ = "Marcar como lido"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/list_embed.php
 
-; COM_KUNENA_GEN_NOFORUMS = "There are no categories in the section!"
-; COM_KUNENA_LOCKED_CATEGORY = "Category is locked"
-; COM_KUNENA_SHOWCAT_PENDING = "pending message(s)"
-; COM_KUNENA_CATEGORIES_LABEL_CREATECATEGORY = "New Category"
-; COM_KUNENA_CATEGORIES_LABEL_EDITSECTION = "Edit Section"
-; COM_KUNENA_CATEGORIES_LABEL_GETRSS = "Get the latest posts directly to your desktop"
-; COM_KUNENA_CATEGORIES_LABEL_MARKCATEGORYREAD = "Mark category read"
+COM_KUNENA_GEN_NOFORUMS = "Não há categorias na secção!"
+COM_KUNENA_LOCKED_CATEGORY = "Categoria bloqueada"
+COM_KUNENA_SHOWCAT_PENDING = "mensagem(s) pendente(s)"
+COM_KUNENA_CATEGORIES_LABEL_CREATECATEGORY = "Nova categoria"
+COM_KUNENA_CATEGORIES_LABEL_EDITSECTION = "Editar secção"
+COM_KUNENA_CATEGORIES_LABEL_GETRSS = "Receba as últimas mensagens no seu computador"
+COM_KUNENA_CATEGORIES_LABEL_MARKCATEGORYREAD = "Marcar categoria como lida"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/manage.php
 
-; COM_KUNENA_PUBLICACCESS = "Public Access"
+COM_KUNENA_PUBLICACCESS = "Acesso Público"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/user_row.php
 
-; COM_KUNENA_MY_POSTS = "Posts"
+COM_KUNENA_MY_POSTS = "Mensagens"
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/statistics.php
 
-; COM_KUNENA_STAT_USERLIST = "User List"
+COM_KUNENA_STAT_USERLIST = "Lista de Utilizadores"
 
 ; JROOT/components/com_kunena/template/crypsis/html/search/default.php
 
-; COM_KUNENA_FORUM_SEARCHRESULTS = "Displaying %s out of %s results."
-; COM_KUNENA_SEARCH_ANSWERS = "Answers"
-; COM_KUNENA_SEARCH_FIND_WITH = "Find topics with"
-; COM_KUNENA_SEARCH_LEAST = "At least"
-; COM_KUNENA_SEARCH_MOST = "At most"
-; COM_KUNENA_SEARCH_OPTIONS = "Search Options"
-; COM_KUNENA_SEARCH_USER_ACTIVE = "Activity in Topics"
-; COM_KUNENA_SEARCH_USER_POSTED = "Messages posted by"
-; COM_KUNENA_SEARCH_USER_STARTED = "Topics started by"
+COM_KUNENA_FORUM_SEARCHRESULTS = "A exibir %s de %s resultados."
+COM_KUNENA_SEARCH_ANSWERS = "Respostas"
+COM_KUNENA_SEARCH_FIND_WITH = "Encontrar mensagens com"
+COM_KUNENA_SEARCH_LEAST = "Pelo menos"
+COM_KUNENA_SEARCH_MOST = "No máximo"
+COM_KUNENA_SEARCH_OPTIONS = "Opções de Pesquisa"
+COM_KUNENA_SEARCH_USER_ACTIVE = "Atividade nos Tópicos"
+COM_KUNENA_SEARCH_USER_POSTED = "Mensagens enviadas por"
+COM_KUNENA_SEARCH_USER_STARTED = "Tópicos iniciados por"
 
 ; JROOT/components/com_kunena/template/crypsis/html/statistics/default.php
 
-; COM_KUNENA_STAT_GENERAL_STATS = "General Statistics"
+COM_KUNENA_STAT_GENERAL_STATS = "Estatísticas Gerais"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_actions.php
 
-; COM_KUNENA_GEN_GOTO = "Goto"
+COM_KUNENA_GEN_GOTO = "Ir para"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_message_actions.php
 
-; COM_KUNENA_REPORT = "Report to moderator"
-; COM_KUNENA_THANKYOU = "The following user(s) said Thank You"
+COM_KUNENA_REPORT = "Reportar ao moderador"
+COM_KUNENA_THANKYOU = "Os seguintes utilizadores Agradeceram"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/default_pollresults.php
 
-; COM_KUNENA_TOPIC_VOTE_RESET = "Reset Votes"
+COM_KUNENA_TOPIC_VOTE_RESET = "Reiniciar votos"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit.php
 
-; COM_KUNENA_EDITOR_ADD_FILE = "Add File"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_SUBJECT = "Enter the subject"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_EMAIL = "Enter the email"
-; COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_AUTHORNAME = "Enter the name of author"
-; COM_KUNENA_UPLOAD_MAX_FILES_WEIGHT = "Maximum File Size"
-; COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT = "Maximum Image File Size"
+COM_KUNENA_EDITOR_ADD_FILE = "Adicionar ficheiro"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_SUBJECT = "Introduzir o assunto"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_EMAIL = "Insira o e-mail"
+COM_KUNENA_TOPIC_EDIT_PLACEHOLDER_AUTHORNAME = "Insira o nome do autor"
+COM_KUNENA_UPLOAD_MAX_FILES_WEIGHT = "Tamanho máximo do ficheiro"
+COM_KUNENA_UPLOAD_MAX_IMAGES_WEIGHT = "Tamanho máximo do ficheiro da imagem"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/edit/editor/default.php
 
-; COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Map Settings"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Type"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Zoom level"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="City"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Hybrid"
+COM_KUNENA_EDITOR_MODAL_TITLE_MAP_SETTINGS="Configurações do mapa"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TYPE="Tipo"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ZOOM_LEVEL="Nível de zoom"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_CITY="Cidade"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_HYBRID="Híbrido"
 ; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_ROADMAP="Roadmap"
 ; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_TERRAIN="Terrain"
-; COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Satellite"
-; COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Code Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Picture Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Size"
-; COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Link Settings"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Text"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Size"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Width"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Height"
-; COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
+COM_KUNENA_EDITOR_MODAL_MAP_SETTINGS_SATELLITE="Satélite"
+COM_KUNENA_EDITOR_MODAL_TITLE_CODE_SETTINGS="Configurações do Código"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS="Configurações de imagem"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_SIZE="Tamanho"
+COM_KUNENA_EDITOR_MODAL_TITLE_PICTURE_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS="Configurações do link"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_TEXT="Texto"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_SIZE="Tamanho"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_WIDTH="Largura"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_HEIGHT="Altura"
+COM_KUNENA_EDITOR_MODAL_TITLE_LINK_SETTINGS_ID="ID"
 ; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER="Url Provider"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
-; COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Poll Settings"
-; COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Add"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_URL_PROVIDER_URL="URL"
+COM_KUNENA_EDITOR_MODAL_TITLE_POLL_SETTINGS="Configuração das Votações"
+COM_KUNENA_EDITOR_MODAL_ADD_LABEL="Adicionar"
 ; COM_KUNENA_EDITOR_MODAL_CLOSE_LABEL="Close modal"
-; COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Video Settings"
+COM_KUNENA_EDITOR_MODAL_TITLE_VIDEO_SETTINGS="Definições de vídeo"
 
 ; Rating
 
@@ -429,92 +429,92 @@ COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Publicação de ficheiros
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/edit_history.php
 
-; COM_KUNENA_POST_TOPIC_HISTORY = "Topic History of"
+COM_KUNENA_POST_TOPIC_HISTORY = "Histórico do Tópico"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topic/moderate.php
 
-; COM_KUNENA_POST_MODERATION_PROCEED = "Proceed"
-; COM_KUNENA_TITLE_MODERATE_MESSAGE = "Moderate Message"
+COM_KUNENA_POST_MODERATION_PROCEED = "Proceder"
+COM_KUNENA_TITLE_MODERATE_MESSAGE = "Moderar Mensagem"
 
 ; JROOT/components/com_kunena/template/crypsis/html/topics/
 
-; COM_KUNENA_LOCKED_TOPIC = "Topic is locked"
+COM_KUNENA_LOCKED_TOPIC = "Tópico bloqueado"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/default_attachments.php
 
-; COM_KUNENA_FILETYPE = "Type"
+COM_KUNENA_FILETYPE = "Tipo"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/default_ban.php
 
-; COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "YYYY-MM-DD - HH:MM:SS"
+COM_KUNENA_BAN_STARTEXPIRETIME_DESC = "AAAA-MM-DD - HH:MM:SS"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/edit_avatar.php
 
-; COM_KUNENA_PROFILE_AVATAR_UPLOAD = "Upload New Avatar"
+COM_KUNENA_PROFILE_AVATAR_UPLOAD = "Carregar novo avatar"
 
 ; JROOT/components/com_kunena/template/crypsis/html/user/list.php
 
-; COM_KUNENA_USRL_REGISTERED_USERS = "%s has <strong>%d</strong> registered users"
+COM_KUNENA_USRL_REGISTERED_USERS = "%s temos <strong>%d</strong> utilizadores registados"
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/logout_menu.php
 
-; COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Preferences"
-; COM_KUNENA_LOGOUTMENU_LABEL_HELP = "Help"
+COM_KUNENA_LOGOUTMENU_LABEL_PREFERENCES = "Preferências"
+COM_KUNENA_LOGOUTMENU_LABEL_HELP = "Ajuda"
 
 ; JROOT/components/com_kunena/template/crypsis/html/announcement/list.php
 
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_ADD = "Add"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_DELETE = "Delete"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_EDIT = "Edit"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_PUBLISH = "Publish"
-; COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_UNPUBLISH = "Unpublish"
-; COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Author"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_ADD = "Adicionar"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_DELETE = "Eliminar"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_EDIT = "Editar"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_PUBLISH = "Publicar"
+COM_KUNENA_ANNOUNCEMENT_ACTIONS_LABEL_UNPUBLISH = "Não publicar"
+COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Autor"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/message/actions.php
 
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Quick Reply"
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Action"
-; COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Moderate"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Resposta Rápida"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Ação"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Moderar"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/actions.php
 
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_ACTION = "Action"
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Moderation"
-; COM_KUNENA_TOPIC_ACTIONS_LABEL_LAYOUT = "Layout"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_ACTION = "Ação"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_MODERATION = "Moderação"
+COM_KUNENA_TOPIC_ACTIONS_LABEL_LAYOUT = "Visual"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/row/table.php
 
-; COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Question"
+COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Questão"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/topic/poll/results/default.php
 
-; COM_KUNENA_TOPIC_MODAL_LABEL_VOTE_RESET = "Confirm Reset of Votes"
-; COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET = "Are you sure that you want to reset all the votes in this poll? This action cannot be reverted."
-; COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE = "Cancel"
-; COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE = "Confirm"
+COM_KUNENA_TOPIC_MODAL_LABEL_VOTE_RESET = "Confirmar a reposição de votos"
+COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET = "Tem a certeza que pretende repor todos os votos desta votação? Essa ação não pode ser revertida."
+COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE = "Cancelar"
+COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE = "Confirmar"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/announcement/edit/default.php
 
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_TITLE = "Enter the title of announcement"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_TITLE = "Introduza o título do anúncio"
 ; COM_KUNENA_ANN_LABEL_PLACEHOLDER_SDESCRIPTION = "Enter the short description of announcement"
-; COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION = "Enter the full description of announcement"
+COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION = "Introduza a descrição completa do anúncio"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/user/profile/default.php
 
-; COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS = "Less"
-; COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE = "More"
-; COM_KUNENA_TOPIC_AUTHOR="Topic Author"
-; COM_KUNENA_MODERATOR="Moderator"
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS = "Menos"
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE = "Mais"
+COM_KUNENA_TOPIC_AUTHOR="Autor do tópico"
+COM_KUNENA_MODERATOR="Moderador"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/user/item/summary/default.php
-; COM_KUNENA_PROFILE_VIEWS = "Profile views"
-; COM_KUNENA_THANK_YOU_RECEIVED = "Thank you received"
+COM_KUNENA_PROFILE_VIEWS = "Acessos ao perfil"
+COM_KUNENA_THANK_YOU_RECEIVED = "Obrigado recebido"
 
 ; new Crypsis
-; COM_KUNENA_GEN_CATEGORY = "Category"
-; COM_KUNENA_GEN_MESSAGE = "Message"
-; COM_KUNENA_GEN_AUTHOR = "Author"
-; COM_KUNENA_EDITOR_EMOTICONS_LABEL = "Emoticons"
-; COM_KUNENA_TOPICLIST_AUTHOR_LABEL = "Author"
-; COM_KUNENA_EDITOR_SMILIES = "Smilies"
+COM_KUNENA_GEN_CATEGORY = "Categoria"
+COM_KUNENA_GEN_MESSAGE = "Mensagem"
+COM_KUNENA_GEN_AUTHOR = "Autor"
+COM_KUNENA_EDITOR_EMOTICONS_LABEL = "Emoções"
+COM_KUNENA_TOPICLIST_AUTHOR_LABEL = "Autor"
+COM_KUNENA_EDITOR_SMILIES = "Emoções"
 ; COM_KUNENA_EDITOR_HELPLINE_SMILIES = "Select a smiley in the list below or use emojis in the textarea"
