Fixes some issues
* padding deleted messages
* Backend - language strings
* Width emoticons
* Stats backend button style

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -529,10 +529,10 @@ COM_KUNENA_ADMIN_CONFIG_URL_SUBJECT_DESC = "Prevent posting topic or reply with 
 COM_KUNENA_CFG_ACCESS_COMPONENT = "Direct Component Access"
 COM_KUNENA_CONFIGURATION_LOG_COLLECT_DATA = "Define if you want to log action or moderation"
 COM_KUNENA_CONFIGURATION_LOG_COLLECT_DATA_DESC = "Define if you want to log action or moderation from the forum"
-COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_START = "Number of caracters from start for shorthen filename"
-COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_START_DESC = "Define the number of caracters from start when shorthen attachments filemane"
-COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END = "Number of caracters from end for shorthen filename"
-COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END_DESC = "Define the number of caracters from end when shorthen attachments filemane"
+COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_START = "Number of characters from start for shorthen filename"
+COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_START_DESC = "Define the number of characters from start when shorthen attachments filemane"
+COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END = "Number of characters from end for shorthen filename"
+COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END_DESC = "Define the number of characters from end when shorthen attachments filemane"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
