--- a/src/components/com_kunena/language/ru-RU/ru-RU.com_kunena.controllers.ini
+++ b/src/components/com_kunena/language/ru-RU/ru-RU.com_kunena.controllers.ini
@@ -81,7 +81,7 @@ COM_KUNENA_TOPIC_VOTE_CHANGED_SUCCESS = "Вы изменили своё мнен
 COM_KUNENA_TOPIC_VOTE_RESET_SUCCESS = "Голоса успешно сброшены"
 COM_KUNENA_TOPIC_VOTE_SUCCESS = "Вы проголосовали!"
 COM_KUNENA_TOPIC_SPAM_LINK_PROTECTION="Слишком много ссылок в вашем сообщений, пожалуйста уменьшите их количество!"
-; COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "You cannot put an URL in the subject of the topic or message."
+COM_KUNENA_TOPIC_MESSAGES_ERROR_URL_IN_SUBJECT = "Вы не можете вставить URL в описание темы или сообщения."
 
 ; JROOT/components/com_kunena/controllers/topics.php
 
