--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.templates.ini
@@ -656,8 +656,8 @@ COM_KUNENA_ENABLED_TOPIC="Identificación del tema"
 COM_KUNENA_ENABLED_LABEL="Id personalizado"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Cargar iconos externos"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Cargar el archivo css cdn glyphicons"
-; COM_KUNENA_TEMPLATE_BORDERLESS="Hide table borders"
-; COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Remove the border around the tables"
+COM_KUNENA_TEMPLATE_BORDERLESS="Ocultar bordes de tablas"
+COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Quitar el borde alrededor de las tablas"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
