--- a/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
@@ -656,8 +656,8 @@ COM_KUNENA_ENABLED_TOPIC="Onderwerp-id"
 COM_KUNENA_ENABLED_LABEL="Aangepaste id"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Laad externe iconen"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Laad cdn glyphicons css bestand"
-; COM_KUNENA_TEMPLATE_BORDERLESS="Hide table borders"
-; COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Remove the border around the tables"
+COM_KUNENA_TEMPLATE_BORDERLESS="Verberg tabelranden"
+COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Verwijder de randen rond de tabellen"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
