--- a/src/components/com_kunena/language/de-DE/de-DE.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/de-DE/de-DE.com_kunena.templates.ini
@@ -658,6 +658,12 @@ COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Lade externe Symbole"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Lade die cdn Glyphicons css Datei"
 COM_KUNENA_TEMPLATE_BORDERLESS="Tabellenrahmen entfernen"
 COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Rahmen von den Tabellen entfernen."
+COM_KUNENA_TEMPLATE_FULLACTIONS="Standardschaltfächen"
+COM_KUNENA_TEMPLATE_FULLACTIONS_DESC="Schaltflächen als Dropdown-Liste oder Gruppe anzeigen."
+; COM_KUNENA_TEMPLATE_QUICKREPLY="Type Quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_DESC="How would you show the quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_MODAL="Modal"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_ALWAYS="Always visible"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
