--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.ini
@@ -129,7 +129,7 @@ COM_KUNENA_NEW = "Nuevo"
 COM_KUNENA_UPLOADED_LABEL_ERROR_REACHED_MAX_NUMBER_FILES = "Han alcanzado el número máximo de archivos permitidos (el máximo permitido son archivos de %d)"
 COM_KUNENA_UPLOADED_LABEL_UPLOAD_BUTTON = "Subir"
 COM_KUNENA_UPLOADED_LABEL_PROCESSING_BUTTON = "Procesando..."
-COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Interrupción"
+COM_KUNENA_UPLOADED_LABEL_ABORT_BUTTON = "Abortar"
 COM_KUNENA_UPLOADED_LABEL_ADD_FILES_BUTTON = "Añadir archivos..."
 COM_KUNENA_UPLOADED_LABEL_DRAG_AND_DROP_OR_BROWSE = "Puede soltar archivos aquí o utilice el botón examinar"
 COM_KUNENA_UPLOAD_ERROR_FILE_RIGHT_MEDIA_DIR = "Error al mover archivo de avatar al directorio de medios de comunicación"
@@ -285,9 +285,9 @@ COM_KUNENA_TITLE_MODERATE_TAB_BAN_HISTORY="Historial de Sanciones"
 COM_KUNENA_TITLE_MODERATE_TAB_MOVE_OPTIONS="Opciones de movimiento"
 COM_KUNENA_TITLE_MODERATE_TAB_BASIC_INFO="Información básica"
 COM_KUNENA_STATUS="Texto de estado"
-COM_KUNENA_MESSAGE_CREATED="creado el tema:"
+COM_KUNENA_MESSAGE_CREATED="creó el tema:"
 COM_KUNENA_MESSAGE_REPLIED="respondió el tema:"
-COM_KUNENA_GEN_GUEST="<strong>Información</strong>: que está posteando el mensaje como 'Huésped'"
+COM_KUNENA_GEN_GUEST="<strong>Información</strong>: Estas publicando el mensaje como un 'Invitado'"
 COM_KUNENA_META_PROFILE="%s está en %s. Para conectar con %s,  Únete a %s hoy mismo."
 COM_KUNENA_PROFILE_ACCOUNT_NOT_SAVED="Perfil no guardado"
 COM_KUNENA_PROFILE_SAVE_ERROR="Error en Perfil de ahorro"
@@ -298,7 +298,7 @@ COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Publicar archivos de imag
 COM_KUNENA_TEAM_MEMBER="Miembro del equipo"
 COM_KUNENA_X_TOPICS_0 = "No temas"
 COM_KUNENA_X_TOPICS_1 = "tema de %s"
-COM_KUNENA_X_TOPICS_MORE = "temas de %s"
+COM_KUNENA_X_TOPICS_MORE = "%s temas"
 COM_KUNENA_BY_X = "por %s"
 COM_KUNENA_FAVORITE = "Favoritos"
 COM_KUNENA_MYPOSTS = "Contiene mis posts"
@@ -474,7 +474,7 @@ COM_KUNENA_ANNOUNCEMENT_AUTHOR = "Autor"
 
 COM_KUNENA_MESSAGE_ACTIONS_LABEL_QUICK_REPLY = "Respuesta rápida"
 COM_KUNENA_MESSAGE_ACTIONS_LABEL_ACTION = "Acción"
-COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Moderada"
+COM_KUNENA_MESSAGE_ACTIONS_LABEL_MODERATE = "Moderar"
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/actions.php
 
