--- a/src/components/com_kunena/language/es-ES/es-ES.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/es-ES/es-ES.com_kunena.templates.ini
@@ -658,6 +658,12 @@ COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Cargar iconos externos"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Cargar el archivo css cdn glyphicons"
 COM_KUNENA_TEMPLATE_BORDERLESS="Ocultar bordes de tablas"
 COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Quitar el borde alrededor de las tablas"
+COM_KUNENA_TEMPLATE_FULLACTIONS="Mostrar acciones predeterminadas"
+COM_KUNENA_TEMPLATE_FULLACTIONS_DESC="Ordenar acciones por grupos de botón"
+; COM_KUNENA_TEMPLATE_QUICKREPLY="Type Quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_DESC="How would you show the quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_MODAL="Modal"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_ALWAYS="Always visible"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
