--- a/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/fr-FR/fr-FR.com_kunena.templates.ini
@@ -658,6 +658,12 @@ COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Chargez des icônes externes"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Chargez le fichier css  glyphicons par cdn"
 COM_KUNENA_TEMPLATE_BORDERLESS="Masquer la bordure de tables"
 COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Supprimer la bordure autour des tables"
+COM_KUNENA_TEMPLATE_FULLACTIONS="Afficher les actions par défaut"
+COM_KUNENA_TEMPLATE_FULLACTIONS_DESC="Classement des actions par groupes"
+COM_KUNENA_TEMPLATE_QUICKREPLY="Réponse rapide"
+COM_KUNENA_TEMPLATE_QUICKREPLY_DESC="Comment souhaitez-vous afficher la réponse rapide"
+COM_KUNENA_TEMPLATE_QUICKREPLY_MODAL="Fenêtre modale"
+COM_KUNENA_TEMPLATE_QUICKREPLY_ALWAYS="Toujours visible"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
