--- a/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.views.ini
+++ b/src/components/com_kunena/language/pt-PT/pt-PT.com_kunena.views.ini
@@ -131,7 +131,7 @@ COM_KUNENA_LOGIN_OR = "ou"
 ; JROOT/components/com_kunena/views/topics/
 
 COM_KUNENA_SHOW_ALL = "Todas"
-; COM_KUNENA_WARNING_READONLY="The forum is in read only mode."
+COM_KUNENA_WARNING_READONLY="O fórum está somente em modo de leitura."
 
 ; JROOT/components/com_kunena/views/topics/view.
 
