--- a/src/components/com_kunena/language/ru-RU/ru-RU.com_kunena.ini
+++ b/src/components/com_kunena/language/ru-RU/ru-RU.com_kunena.ini
@@ -343,7 +343,7 @@ COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Прикрепление 
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/user_row.php
 
-; COM_KUNENA_MY_POSTS = "Posts"
+COM_KUNENA_MY_POSTS = "Сообщения"
 
 ; JROOT/components/com_kunena/template/crypsis/html/common/statistics.php
 
@@ -484,7 +484,7 @@ COM_KUNENA_POST_ATTACHMENTS_IMAGE_ONLY_FOR_MODERATORS="Прикрепление 
 
 ; JROOT/components/com_kunena/template/crypsis/layouts/topic/row/table.php
 
-; COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Question"
+COM_KUNENA_TOPIC_ROW_TABLE_LABEL_QUESTION = "Вопрос"
 
 ; JROOT/components/com_kunena/site/template/crypsis/layouts/topic/poll/results/default.php
 
