--- a/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/hu-HU/hu-HU.com_kunena.templates.ini
@@ -658,6 +658,12 @@ COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Külső ikonok betöltése"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="CDN glyphicons css fájl betöltése"
 COM_KUNENA_TEMPLATE_BORDERLESS="Táblázatszegélyek elrejtése"
 COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Szegélyek eltávolítása a táblázatok körül."
+; COM_KUNENA_TEMPLATE_FULLACTIONS="Show default actions"
+; COM_KUNENA_TEMPLATE_FULLACTIONS_DESC="Order actions by button groups"
+; COM_KUNENA_TEMPLATE_QUICKREPLY="Type Quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_DESC="How would you show the quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_MODAL="Modal"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_ALWAYS="Always visible"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
