--- a/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/nl-NL/nl-NL.com_kunena.templates.ini
@@ -658,6 +658,12 @@ COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Laad externe iconen"
 COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Laad cdn glyphicons css bestand"
 COM_KUNENA_TEMPLATE_BORDERLESS="Verberg tabelranden"
 COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Verwijder de randen rond de tabellen"
+; COM_KUNENA_TEMPLATE_FULLACTIONS="Show default actions"
+; COM_KUNENA_TEMPLATE_FULLACTIONS_DESC="Order actions by button groups"
+; COM_KUNENA_TEMPLATE_QUICKREPLY="Type Quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_DESC="How would you show the quickreply"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_MODAL="Modal"
+; COM_KUNENA_TEMPLATE_QUICKREPLY_ALWAYS="Always visible"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
