Improve Seo on pages

--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -79,6 +79,7 @@ COM_KUNENA_NO = "No"
 COM_KUNENA_NOMODS = "There are no Moderators assigned to this category"
 COM_KUNENA_NO_ACCESS = "You do not have permissions to access this page."
 COM_KUNENA_PAGE = "Page:"
+COM_KUNENA_PAGES = "Page"
 COM_KUNENA_PARENT = "Parent:"
 COM_KUNENA_PARENTDESC = "Hint: To create a section, choose <em>Top Level</em> as the parent. A section is a container for categories.<br />Messages can be <strong>only</strong> posted to categories within sections."
 COM_KUNENA_PERMISSIONS = "Permissions"
