Google maps API key needed #4086

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -533,6 +533,8 @@ COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_START = "Number of characters from st
 COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_START_DESC = "Define the number of characters from start when shorthen attachments filemane"
 COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END = "Number of characters from end for shorthen filename"
 COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END_DESC = "Define the number of characters from end when shorthen attachments filemane"
+COM_KUNENA_CONFIGURATION_GOOGLE_MAPS_API_KEY = "Google maps API key to get better stats usage of google API"
+COM_KUNENA_CONFIGURATION_GOOGLE_MAPS_API_KEY_DESC  = "Google maps API key to get better stats usage of google API. You need to enable the Google Maps Geocoding API in the developer console. <a href='https://console.developers.google.com/flows/enableapi?apiid=maps_backend&keyType=CLIENT_SIDE&reusekey=true' target='_blank'>Ask your API key</a>"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
