Error in Duplicated Alias for Categories (convert js to jQuery) #3999

--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -98,6 +98,7 @@ COM_KUNENA_ICON="Category Icon:"
 COM_KUNENA_ICON_DESC="Enter here the class for your icon. Example <strong>icon-home</strong>"
 COM_KUNENA_RATING_CATEGORIES_ALLOWED = "Allow rating"
 COM_KUNENA_RATING_CATEGORIES_ALLOWED_DESC = "Allow rating vote into this category"
+COM_KUNENA_CATEGORIES_ERROR_CHOOSE_ANOTHER_ALIAS = "Please choose an another aliasname"
 
 ; JROOT/administrator/components/com_kunena/views/categories/tmpl/default.php
 
